Updated HTML manual

--- a/MANUALHTML/calclock.html
+++ b/MANUALHTML/calclock.html
@@ -99,55 +99,131 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>count(1)</h2>
+      <h2>calclock(1)</h2>
 
       <h3>【名前】</h3>
 
-      <p>count :  同じキーの行数をカウント</p>
+      <p>calclock : 日付と時刻を秒数に変換</p>
 
       <h3>【書式】</h3>
 
-      <pre class="list">Usage	: count &lt;k1&gt; &lt;k2&gt; &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
+      <pre class="list">Usage   : calclock [-r] &lt;f1&gt; &lt;f2&gt; &lt;f3&gt; ... &lt;file&gt;
+Version : Thu Mar 21 21:57:55 JST 2013</pre>
 
       <h3>【説明】</h3>
 
-      <p>引数のファイルまたは標準入力のテキストデータの指定したキーフィールドの値が同じ行(行)の数を出力する。キーとなるフィールドは開始となるフィールドkey1から、終了となるフィールドkey2への形で指定する。</p>
+      <p>標準入力または入力ファイル&lt;file&gt;の指定フィールド&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;...の年月日や時間を1970年1月1日0時0分0秒からの秒数に変換して出力する。オプション-rを指定すると逆の変換を実施する。年月日データや時刻データを10進数に置き換えて計算するなどの用途に使用する。</p>
+
+      <p>日付や時刻は次のフォーマットである必要がある。</p>
+
+      <dl>
+        <dt>yyyymmdd</dt>
+        <dd>年月日(8桁)</dd>
+        <dt>HHMMSS</dt>
+        <dd>時分秒(6桁)</dd>
+        <dt>yyyymmddHHMMSS</dt>
+        <dd>年月日時分秒(14桁)</dd>
+      </dl>
+
+      <p>変換後の値を分に直す場合は60、時は3600、日は86400で除算する。</p>
 
       <h3>【例1】</h3>
 
       <pre class="cmd">$ cat data
-01 埼玉県 01 さいたま市 91 59 20 76 54
-01 埼玉県 02 川越市 46 39 8 5 21
-01 埼玉県 03 熊谷市 82 0 23 84 10
-02 東京都 04 新宿区 30 50 71 36 30
-02 東京都 05 中央区 78 13 44 28 51
-02 東京都 06 港区 58 71 20 10 6
-02 東京都 07 千代田区 39 22 13 76 08
-02 東京都 08 八王子市 82 79 16 21 80
-02 東京都 09 立川市 50 2 33 15 62
-03 千葉県 10 千葉市 52 91 44 9 0
-03 千葉県 11 市川市 60 89 33 18 6
-03 千葉県 12 柏市 95 60 35 93 76
-04 神奈川県 13 横浜市 92 56 83 96 75
-04 神奈川県 14 川崎市 30 12 32 44 19
-04 神奈川県 15 厚木市 48 66 23 71 24
-04 神奈川県 16 小田原市 45 21 24 39 03
+0001 0000007 20060201 20060206 117 8335 -145
+0001 0000007 20060203 20060206 221 15470 0
+0001 0000007 20060205 20060206 85 5950 0
+0001 0000007 20060206 20060206 293 20527 -17
+0001 0000007 20060207 20060206 445 31150 0
+0002 0000007 20060208 20060206 150 11768 -1268
+0002 0000007 20060209 20060206 588 41160 0
+0002 0000007 20060210 20060206 444 31080 0
 $ </pre>
 
-      <pre class="cmd">$ count 1 2 data		←県ごとの市の数を数えて出力
-01 埼玉県 3
-02 東京都 6
-03 千葉県 3
-04 神奈川県 4
+      <p>4フィールド目と3フィールド目を変換し、その間の差分の日数を求めるには次のようにコマンドを実行する。</p>
+
+      <pre class="cmd">$ calclock 3 4 - &lt; data         |\
+tee data2                       |\
+awk '{print ($6-$4)/86400}'     &gt; data3
+$ cat data2
+0001 0000007 20060201 1138752000 20060206 1139184000 117 8335 -145
+0001 0000007 20060203 1138924800 20060206 1139184000 221 15470 0
+0001 0000007 20060205 1139097600 20060206 1139184000 85 5950 0
+0001 0000007 20060206 1139184000 20060206 1139184000 293 20527 -17
+0001 0000007 20060207 1139270400 20060206 1139184000 445 31150 0
+0002 0000007 20060208 1139356800 20060206 1139184000 150 11768 -1268
+0002 0000007 20060209 1139443200 20060206 1139184000 588 41160 0
+0002 0000007 20060210 1139529600 20060206 1139184000 444 31080 0
+$ cat data3
+5
+3
+1
+0
+-1
+-2
+-3
+-4
+$ </pre>
+
+      <h3>【例2】</h3>
+
+      <p>-rオプションを使用すると、指定したフィールドの値(1970年1月1日0時0分0秒からの秒数)を通常の年月日時分秒の14桁の表記に変換する。年月日のみのフォーマットにする場合は、出力後awk(1)のsubstr()やself(1)で上8桁を切り出す。</p>
+
+      <pre class="cmd">$ cat data
+0001 0000007 20060201 117 8335 -145
+0001 0000007 20060203 221 15470 0
+0001 0000007 20060205 85 5950 0
+0001 0000007 20060206 293 20527 -17
+0001 0000007 20060207 445 31150 0
+0002 0000007 20060208 150 11768 -1268
+0002 0000007 20060209 588 41160 0
+0002 0000007 20060210 444 31080 0
+$ </pre>
+
+      <p>3フィールド目の各日の3日後の日付を求めるには、次のようにコマンドを実行する。</p>
+
+      <pre class="cmd">$ calclock 3 data               |\
+awk '{print $4+86400*3}'        |\
+tee data2                       |\
+calclock -r 1 -                 |\
+tee data3                       |\
+self 2.1.8                      &gt; data4
+$ cat data2
+1138978800
+1139151600
+1139324400
+1139410800
+1139497200
+1139583600
+1139670000
+1139756400
+$ cat data3 
+1138978800 20060204000000
+1139151600 20060206000000
+1139324400 20060208000000
+1139410800 20060209000000
+1139497200 20060210000000
+1139583600 20060211000000
+1139670000 20060212000000
+1139756400 20060213000000
+$ cat data4
+20060204
+20060206
+20060208
+20060209
+20060210
+20060211
+20060212
+20060213
 $ </pre>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="gyo.html">gyo(1)</a>、<a href="juni.html">juni(1)</a>、<a href="rank.html">rank(1)</a>、<a href="retu.html">retu(1)</a></p>
+      <p><a href="dayslash.html">dayslash(1)</a>、<a href="mdate.html">mdate(1)</a>、<a href="yobi.html">yobi(1)</a></p>
+
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2013-28-16 17:04:16</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
