--- a/MANUALHTML/join2.html
+++ b/MANUALHTML/join2.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,37 +99,39 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>join2(USP Lab(1))</h2>
+      <h2>join2(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>join2 : トランザクションファイルにマスターファイルを連結</p>
+      <p>join2 : <a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(一致しなかった行はダミーデータへ置換)</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: join2 [-d&lt;string&gt;] [+&lt;string&gt;] key=&lt;key&gt; &lt;master_file&gt; &lt;trans_file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011
-	UTF-8</pre>
+      <pre class="list">Usage	: join2 [-d&lt;string&gt;] [+&lt;string&gt;] key=&lt;key&gt; &lt;<a href="master-file.html">master</a>&gt; &lt;<a href="transaction-file.html">tran</a>&gt;
+Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>テキストファイルtranのkey=&lt;n&gt;で指定したキーフィールドがマスターファイルmasterの第1フィールド(キーフィールド)と一致した行をtranから抽出し、masterの情報を連結して出力する。一致しない行はダミーデータ*を連結して出力する。ダミーデータは別途-dオプションにて指定することもできる。</p>
+      <p><a href="transaction-file.html">tran</a>のkey=&lt;n&gt;で指定したキーフィールドが<a href="master-file.html">master</a>の第1フィールド(キーフィールド)と一致した行を<a href="transaction-file.html">tran</a>から抽出し、<a href="master-file.html">master</a>の情報を連結して出力する。一致しない行はダミーデータ*を連結して出力する。ダミーデータは-dオプションにて指定できる。</p>
 
-<p>masterの第1フィールドおよびtranの第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。また、masterはキーフィールド(第1フィールド)がユニークでなければならない(第1フィールドが同じ値を持つ行が複数あってはならない)。tranについてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値の行はいくつあっても構わない。</p>
+      <p><a href="master-file.html">master</a>に-を指定すると標準入力を<a href="master-file.html">マスタファイル</a>とする。<a href="transaction-file.html">tran</a>が無指定かまたは-が指定されている場合には、標準入力が<a href="transaction-file.html">トランザクションファイル</a>となる。</p>
 
-<p>キーに選択するフィールドは複数指定することも可能。</p>
+      <p><a href="master-file.html">master</a>の第1フィールドおよび<a href="transaction-file.html">tran</a>の第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。また、<a href="master-file.html">master</a>はキーフィールド(第1フィールド)がユニークでなければならない(第1フィールドが同じ値を持つ行が複数あってはならない)。<a href="transaction-file.html">tran</a>についてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値の行はいくつあっても構わない。</p>
 
-<h3>【例1】基本パターン</h3>
+      <p><a href="master-file.html">master</a>の第1フィールドおよび<a href="transaction-file.html">tran</a>の第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。また、<a href="master-file.html">master</a>のキーフィールド(第1フィールド)はユニークでなければならない。(第1フィールドが同じ値をもつ行が複数あってはならない)。<a href="transaction-file.html">tran</a>についてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値を行はいくつあっても構わない。</p>
 
-<pre class="cmd">$ cat master
+      <p><a href="transaction-file.html">tran</a>でキーが整列されていないものはjoin2(1)では処理できない。その場合は一旦<a href="transaction-file.html">tran</a>を整列してからjoin2(1)で処理するか、join2(1)のかわりに<a href="cjoin2.html">cjoin2(1)</a>を使って処理すればよい。</p>
+
+      <h3>【例1】基本パターン</h3>
+
+      <pre class="cmd">$ cat <a href="master-file.html">master</a>
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
 $ </pre>
 
-<pre class="cmd">$ cat kekka
+      <pre class="cmd">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -131,9 +144,9 @@ $ </pre>
 0000011 92 56 83 96 75
 $ </pre>
 
-<p>masterに存在しない行は次のように*で補完して出力される。</p>
+      <p><a href="master-file.html">master</a>に存在しない行は次のように*で補完して出力される。</p>
 
-<pre class="cmd">$ join2 key=1 master kekka
+      <pre class="cmd">$ join2 key=1 <a href="master-file.html">master</a> kekka
 0000000 ********** ** * 91 59 20 76 54
 0000001 ********** ** * 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -146,18 +159,18 @@ $ </pre>
 0000011 ********** ** * 92 56 83 96 75
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>左から順に連続した複数のフィールドをキーに指定する場合次のようになる。第2、第3フィールドでキーが一致するかどうかをチェックしている。</a>
+      <p>左から順に連続した複数のフィールドをキーに指定する場合次のようになる。第2、第3フィールドでキーが一致するかどうかをチェックしている。</a>
 
-<pre class="cmd">$ cat master 
+      <pre class="cmd">$ cat <a href="master-file.html">master</a>
 A 0000003 杉山______ 26 F
 A 0000005 崎村______ 50 F
 B 0000007 梶川______ 42 F
 C 0000010 柳本______ 50 F
 $ </pre>
 
-<pre class="cmd">$ cat kekka
+      <pre class="cmd">$ cat kekka
 1 A 0000000 91 59 20 76 54
 2 A 0000001 46 39 8  5  21
 3 A 0000003 30 50 71 36 30
@@ -170,7 +183,7 @@ $ </pre>
 10 C 0000011 92 56 83 96 75
 $ </pre>
 
-<pre class="cmd">$ join2 key=2/3 master kekka
+      <pre class="cmd">$ join2 key=2/3 <a href="master-file.html">master</a> kekka
 1 A 0000000 ********** ** * 91 59 20 76 54
 2 A 0000001 ********** ** * 46 39 8  5  21
 3 A 0000003 杉山______ 26 F 30 50 71 36 30
@@ -183,18 +196,18 @@ $ </pre>
 10 C 0000011 ********** ** * 92 56 83 96 75
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>+&lt;string&gt;はダミーデータとして補完する文字を指定するオプション。+の後に補完で使用する文字を指定する。</p>
+      <p>+&lt;string&gt;はダミーデータとして補完する文字を指定するオプション。+の後に補完で使用する文字を指定する。</p>
 
-<pre class="cmd">$ cat master
+      <pre class="cmd">$ cat <a href="master-file.html">master</a>
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
 $ </pre>
 
-<pre class="cmd">$ cat kekka
+      <pre class="cmd">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -207,7 +220,7 @@ $ </pre>
 0000011 92 56 83 96 75
 $ </pre>
 
-<pre class="cmd">$ join2 +@ key=1 master kekka
+      <pre class="cmd">$ join2 +@ key=1 <a href="master-file.html">master</a> kekka
 0000000 @ @ @ 91 59 20 76 54
 0000001 @ @ @ 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -220,37 +233,28 @@ $ </pre>
 0000011 @ @ @ 92 56 83 96 75
 $ </pre>
 
-<h3>【コラム】</h3>
+      <h3>【備考】</h3>
 
-<p>masterが0バイトの時は何も連結せずtranそのものを出力する。</p>
+      <p><a href="master-file.html">master</a>が0バイトの時は何も連結せず<a href="transaction-file.html">tran</a>そのものを出力する。</p>
 
-<pre class="cmd">$ : &gt; master
-$ join2 key=1 master tran &gt; data
-$ cmp tran data		←同じデータが出力される</pre>
+      <pre class="cmd">$ : &gt; <a href="master-file.html">master</a>
+$ join2 key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a> &gt; data
+$ cmp <a href="transaction-file.html">tran</a> data		←同じデータが出力される</pre>
 
-<p>masterのフィールドを保証したい時は、例えば次のようなコードを書く。</p>
+      <p><a href="master-file.html">master</a>のフィールドを保証したい時は、例えば次のようなコードを書く。</p>
 
-<pre class="cmd">$ [ ! -s master ] &amp;&amp; echo 0000000 0 &gt; master 
-$ join2 key=1 master tran</pre>
+      <pre class="cmd">$ [ ! -s <a href="master-file.html">master</a> ] &amp;&amp; echo 0000000 0 &gt; <a href="master-file.html">master</a>
+$ join2 key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a></pre>
 
-<p><a href="join0.html">join0(USP Lab(1))</a>、<a href="join1.html">join1(USP Lab(1))</a></p>
+      <h3>【関連項目】</h3>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
+      <p><a href="cjoin0.html">cjoin0(1)</a>、<a href="cjoin1.html">cjoin1(1)</a>、<a href="cjoin2.html">cjoin2(1)</a>、<a href="join0.html">join0(1)</a>、<a href="join1.html">join1(1)</a>、<a href="loopj.html">loopj(1)</a>、<a href="loopx.html">loopx(1)</a>、<a href="up3.html">up3(1)</a>、<a href="master-file.html">マスタファイル(5)</a>、<a href="transaction-file.html">トランザクションファイル(5)</a></p>
+
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-27 19:42:24
-    </div>
+    <div id="lastmodified">last modified: 2013-13-15 19:04:15</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
