--- a/MANUALHTML/nameread.html
+++ b/MANUALHTML/nameread.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,123 +99,111 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>nameread(USP Lab(1))</h2>
+      <h2>nameread(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>nameread : <a href="name-format.html">ネーム形式</a>のファイル読み込み</p>
+      <p>nameread : <a href="name-format.html">ネーム形式(5)</a>のファイル読み込み</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: nameread [-el] &lt;name&gt; &lt;namefile&gt;
+      <pre class="list">Usage	: nameread [-el] &lt;name&gt; &lt;namefile&gt;
 Option	: -d&lt;c&gt;       空白を置換
 	: -i&lt;string&gt;  ヌルデータの初期化
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p><a href="name-format.html">ネーム形式</a>ファイルからnameを指定して値を読みる。&lt;namefile&gt;が-あるいは指定がないときは標準入力よりデータを受け取る。</p>
+      <p><a href="name-file.html">ネームファイル(5)</a>からnameを指定して値を読みる。&lt;namefile&gt;が-あるいは指定がないときは標準入力よりデータを受け取る。</p>
 
-<p>-lオプションでnameも合わせて出力する。-eオプションで正規表現を指定でき、-dオプションで空白データを置換する文字を指定する(指定がない場合は空白データを削除する)。-iオプションでヌルデータの初期化を実施する。</pre>
+      <p>-lオプションでnameも合わせて出力する。-eオプションで正規表現を指定でき、-dオプションで空白データを置換する文字を指定する(指定がない場合は空白データを削除する)。-iオプションでヌルデータの初期化を実施する。</pre>
 
-<h3>【例】</h3>
+      <h3>【例】</h3>
 
-<pre class="cmd">$ cat namefile
+      <pre class="cmd">$ cat namefile
 A usp
 B usp laboratory
 C
 $ </pre>
 
-<p>通常の出力</p>
+      <p>通常の出力</p>
 
-<pre class="cmd">$ nameread A namefile
+      <pre class="cmd">$ nameread A namefile
 usp
 $ </pre>
 
-<p><a href="name-format.html">ネーム形式</a>のデータは空白を含む</p>
+      <p><a href="name-format.html">ネーム形式(5)</a>のデータは空白を含む</p>
 
-<pre class="cmd">$ nameread B namefile
+      <pre class="cmd">$ nameread B namefile
 usp laboratory
 $ </pre>
 
-<p>空白を変換したいときは-dオプションを使用</p>
+      <p>空白を変換したいときは-dオプションを使用</p>
 
-<pre class="cmd">$ nameread -d_ B namefile
+      <pre class="cmd">$ nameread -d_ B namefile
 usp_laboratory
 $ </pre>
 
-<p>空白を削除したいときは-dオプションを引数なしで指定</p>
+      <p>空白を削除したいときは-dオプションを引数なしで指定</p>
 
-<pre class="cmd">$ nameread -d B namefile
+      <pre class="cmd">$ nameread -d B namefile
 usplaboratory
 $ </pre>
 
-<p>名前のみ存在している場合には空行を出力</p>
+      <p>名前のみ存在している場合には空行を出力</p>
 
-<pre class="cmd">$ nameread C namefile    
+      <pre class="cmd">$ nameread C namefile
 
 $ </pre>
 
-<p>ヌルデータを初期化する場合は-iオプションを使用</p>
+      <p>ヌルデータを初期化する場合は-iオプションを使用</p>
 
-<pre class="cmd">$ namread -i @@@ C namefile
+      <pre class="cmd">$ namread -i @@@ C namefile
 @@@
 $ </pre>
 
-<p>名前が存在しない場合には何も出力しない</p>
+      <p>名前が存在しない場合には何も出力しない</p>
 
-<pre class="cmd">$ nameread D namefile    
+      <pre class="cmd">$ nameread D namefile
 $ </pre>
 
-<p>名前も一緒に出力するには-lオプションを使用</p>
+      <p>名前も一緒に出力するには-lオプションを使用</p>
 
-<pre class="cmd">$ nameread -l A namefile
+      <pre class="cmd">$ nameread -l A namefile
 A usp
 $ </pre>
 
-<p>-eオプションを指定することで正規表現を利用可能</p>
+      <p>-eオプションを指定することで正規表現を利用可能</p>
 
-<pre class="cmd">$ cat namefile2
+      <pre class="cmd">$ cat namefile2
 A01 1
 A02 2
 A03 3
 A10 5
 $ </pre>
 
-<pre class="cmd">$ nameread -e '^A0[0-9]$' namefile2
+      <pre class="cmd">$ nameread -e '^A0[0-9]$' namefile2
 1
 2
 3
 $ </pre>
 
-<pre class="cmd">$ nameread -el '^A0[0-9]$' namefile2
+      <pre class="cmd">$ nameread -el '^A0[0-9]$' namefile2
 A01 1
 A02 2
 A03 3
 $ </pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="cgi-name.html">cgi-name(USP Lab(1))</a>、<a href="mime-read.html">mime-read(USP Lab(1))</a>、<a href="name-format.html">ネーム形式(USP Lab(5))</a></p>
+      <p><a href="cgi-name.html">cgi-name(1)</a>、<a href="mime-read.html">mime-read(1)</a>、<a href="name-format.html">ネーム形式(5)</a></p>
 
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-13 17:10:04
-    </div>
+    <div id="lastmodified">last modified: 2013-06-15 20:04:15</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
