--- a/MANUALHTML/tag-format.html
+++ b/MANUALHTML/tag-format.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -31,14 +29,21 @@
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -98,7 +103,7 @@
 
       <h3>【名前】</h3>
 
-      <p>タグ形式 : 1行目にヘッダがついた<a href="field-format.html">フィールド形式</a></p>
+      <p>タグ形式 : 1行目にヘッダがついた<a href="field-format.html">フィールド形式(5)</a></p>
 
       <h3>【書式】</h3>
 
@@ -108,14 +113,14 @@
 
       <h3>【説明】</h3>
 
-      <p>タグ形式は<a href="field-format.html">フィールド形式</a>のデータの先頭行にヘッダが配置されたもの。主に次の用途で使用される。</p>
+      <p>タグ形式(5)は<a href="field-format.html">フィールド形式(5)</a>のデータの先頭行にヘッダが配置されたもの。主に次の用途で使用される。</p>
 
       <ul>
-      <li>複数の<a href="name-file.html">ネームファイル</a>を単一のファイルにまとめる</li>
+      <li>複数の<a href="name-file.html">ネームファイル(5)</a>を単一のファイルにまとめる</li>
       <li>フィールド数がきわめて多い場合</li>
       </ul>
 
-      <p><a href="name-file.html">ネームファイル</a>を使用することでフィールドに名前を与えることはできるが、1つの鍵にいくつもの値が存在するケースではファイル数が増えることになり扱いにくい面がある。タグ形式はこうした場合に単一ファイル化する方法として利用できる。</p>
+      <p><a href="name-file.html">ネームファイル(5)</a>を使用することでフィールドに名前を与えることはできるが、1つの鍵にいくつもの値が存在するケースではファイル数が増えることになり扱いにくい面がある。タグ形式(5)はこうした場合に単一ファイル化する方法として利用できる。</p>
 
       <h3>【例1】</h3>
 
@@ -137,9 +142,9 @@
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-08-01 16:19:55</div>
+    <div id="lastmodified">last modified: 2013-22-15 20:04:15</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
