--- a/MANUALHTML/cgi-name.html
+++ b/MANUALHTML/cgi-name.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,80 +99,78 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>cgi-name(USP Lab(1))</h2>
+      <h2>cgi-name(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>cgi-name : CGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>に変換</p>
+      <p>cgi-name : CGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>に変換</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: cgi-name [-d&lt;c&gt;][-i&lt;string&gt;] &lt;param_file&gt;
+      <pre class="list">Usage	: cgi-name [-d&lt;c&gt;][-i&lt;string&gt;] &lt;param_file&gt;
 Option	:          [--template &lt;html&gt;]
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>cgi-nameはWEBサーバのCGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>へ変換する。</p>
+      <p>cgi-nameはWEBサーバのCGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>へ変換する。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<p>Webサーバよりplace=tokyo&amp;country=japanという文字列が渡される場合、キー値と値を<a href="name-format.html">ネーム形式</a>に変更して出力する。</p>
+      <p>Webサーバよりplace=tokyo&amp;country=japanという文字列が渡される場合、キー値と値を<a href="name-format.html">ネーム形式</a>に変更して出力する。</p>
 
-<pre class="cmd">$ dd bs=$CONTENT_LENGTH | cgi-name
+      <pre class="cmd">$ dd bs=$CONTENT_LENGTH | cgi-name
 place tokyo
 country japan
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>改行(%0D%0A)はnに変換される。</p>
+      <p>改行(%0D%0A)はnに変換される。</p>
 
-<pre class="cmd">$ echo 'place=%E6%9D%B1%E4%BA%AC%0D%0A%E5%A4%A7%E9%98%AA&amp;country=japan' | \
-cgi-name
+      <pre class="cmd">$ echo 'place=%E6%9D%B1%E4%BA%AC%0D%0A%E5%A4%A7%E9%98%AA&amp;<a href="count.html">count</a>ry=japan' | cgi-name
 place 東京n大阪
 country japan
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>-dオプションを指定すると半角空白は削除あるいは指定文字に変換される。</p>
+      <p>-dオプションを指定すると半角空白は削除あるいは指定文字に変換される。</p>
 
-<pre class="cmd">$ echo 'place=tokyo osaka&amp;country=japan' | cgi-name
+      <pre class="cmd">$ echo 'place=tokyo osaka&amp;<a href="count.html">count</a>ry=japan' | cgi-name
 place tokyo osaka
 country japan
 $ </pre>
 
-<pre class="cmd">$ echo 'place=tokyo osaka&amp;country=japan' | cgi-name -d_
+      <pre class="cmd">$ echo 'place=tokyo osaka&amp;<a href="count.html">count</a>ry=japan' | cgi-name -d_
 place tokyo_osaka
 country japan
 $ </pre>
 
-<pre class="cmd">$ echo 'place=tokyo osaka&amp;country=japan' | cgi-name -d
+      <pre class="cmd">$ echo 'place=tokyo osaka&amp;<a href="count.html">count</a>ry=japan' | cgi-name -d
 place tokyoosaka
 country japan
 $ </pre>
 
-<h3>【例4】</h3>
+      <h3>【例4】</h3>
 
-<p>-iオプションを指定することで、返される文字列がヌルの場合の初期値を指定できる。</p>
+      <p>-iオプションを指定することで、返される文字列がヌルの場合の初期値を指定できる。</p>
 
-<pre class="cmd">$ echo 'place=&amp;country=japan' | cgi-name
+      <pre class="cmd">$ echo 'place=&amp;<a href="count.html">count</a>ry=japan' | cgi-name
 place
 country japan
 $ </pre>
 
-<pre class="cmd">$ echo 'place=&amp;country=japan' | cgi-name -i somewhere
+      <pre class="cmd">$ echo 'place=&amp;<a href="count.html">count</a>ry=japan' | cgi-name -i somewhere
 place somewhere
 country japan
 $ </pre>
 
-<h3>【例5】</h3>
+      <h3>【例5】</h3>
 
-<p>--templateオプションを指定することで、指定したHTMLテンプレートより、radioboxとcheckboxの名称を取り出し、その名称でデータが出力されなければ、出力をその名称で補完する。radioboxやcheckboxは選択しないでsubmitすると値そのものが出力されない。何も選択しなかったというデータを生成するためにこのオプションを使用する。</p>
+      <p>--templateオプションを指定することで、指定したHTMLテンプレートより、radioboxとcheckboxの名称を取り出し、その名称でデータが出力されなければ、出力をその名称で補完する。radioboxやcheckboxは選択しないでsubmitすると値そのものが出力されない。何も選択しなかったというデータを生成するためにこのオプションを使用する。</p>
 
-<pre class="cmd">$ cat html
+      <pre class="cmd">$ cat html
 -----省略
 &lt;input type="radiobox" name="XXXX" value="A" /&gt;
 &lt;input type="radiobox" name="XXXX" value="B" /&gt;
@@ -172,55 +181,43 @@ $ </pre>
 -----省略
 $ </pre>
 
-<pre class="cmd">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html
+      <pre class="cmd">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html
 -----省略
 XXXX _
 YYYY _
 -----省略
 $ </pre>
 
-<h3>【例6】</h3>
+      <h3>【例6】</h3>
 
-<p>radiobox checkboxがhtmlテンプレートのmojihame -lコマンド対象部分にある場合においても、タグ名_%数字を認識して選択値がなくてもタグ名を出力する。</p>
+      <p>radiobox checkboxがhtmlテンプレートのmojihame -lコマンド対象部分にある場合においても、タグ名_%数字を認識して選択値がなくてもタグ名を出力する。</p>
 
-<pre class="cmd">$ cat html
+      <pre class="cmd">$ cat html
 -----省略
-&lt;!-- MOJIHAME --&gt; 
+&lt;!-- MOJIHAME --&gt;
 &lt;input type="radiobox" name="X_%1" value="%2" /&gt;
-&lt;!-- MOJIHAME --&gt; 
+&lt;!-- MOJIHAME --&gt;
 -----省略
 $ </pre>
 
-<pre class="cmd">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html
+      <pre class="cmd">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html
 -----省略
 X _
 -----省略
 $ </pre>
 
-<h3>【備考】</h3>
+      <h3>【備考】</h3>
 
-<p>CGI POSTメソッドで受け渡されるデータには改行がない。通常のファイルとして使用するには、ファイル末に改行コードを付加しておくほうが扱いやすい。cgi-nameコマンドはファイル末の改行があってもなくても正しく値を取り出す。</p>
+      <p>CGI POSTメソッドで受け渡されるデータには改行がない。通常のファイルとして使用するには、ファイル末に改行コードを付加しておくほうが扱いやすい。cgi-nameコマンドはファイル末の改行があってもなくても正しく値を取り出す。</p>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="mime-read.html">mime-read(USP Lab(1))</a>、<a href="nameread.html">nameread(USP Lab(1))</a>、<a href="name-format.html">ネーム形式(USP Lab(5))</a></p>
-
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
+      <p><a href="mime-read.html">mime-read(1)</a>、<a href="nameread.html">nameread(1)</a>、<a href="name-format.html">ネーム形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-13 17:07:01
-    </div>
+    <div id="lastmodified">last modified: 2012-22-02 14:08:02</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
