--- a/MANUALHTML/comma.html
+++ b/MANUALHTML/comma.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,26 +99,25 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>comma(USP Lab(1))</h2>
+      <h2>comma(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>comma : 指定したフィールドに3桁または4桁のカンマを追加</p>
+      <p>comma : 指定したフィールドに3桁または4桁のカンマを追加</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: comma [+&lt;n&gt;h][-4] &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
+      <pre class="list">Usage	: comma [+&lt;n&gt;h][-4] &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
 	: comma -d[4] &lt;string&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>引数のファイルまたは標準入力のテキストデータの数字フィールドに3桁または4桁のカンマを追加する。カンマを追加するフィールドは引数で指定できる。</p>
+      <p>引数のファイルまたは標準入力のテキストデータの数字フィールドに3桁または4桁のカンマを追加する。カンマを追加するフィールドは引数で指定できる。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 20060201 296030 6710000
 20060202 1300100 3130000
 20060203 309500 20100
@@ -116,7 +126,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 20060206 771100 400000
 $ </pre>
 
-<pre class="cmd">$ comma 2 3 data 
+      <pre class="cmd">$ comma 2 3 data
 20060201 296,030 6,710,000
 20060202 1,300,100 3,130,000
 20060203 309,500 20,100
@@ -125,7 +135,7 @@ $ </pre>
 20060206 771,100 400,000
 $ </pre>
 
-<pre class="cmd">$ comma -4 2 3 data	←4桁カンマ
+      <pre class="cmd">$ comma -4 2 3 data	←4桁カンマ
 20060201 29,6030 671,0000
 20060202 130,0100 313,0000
 20060203 30,9500 2,0100
@@ -134,13 +144,13 @@ $ </pre>
 20060206 77,1100 40,0000
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>+hオプションを使用すると1行目の行を除いてカンマを追加する。先頭行が項目名などの場合に使用する。+2hや+3hのように数字を指定すると、2行目または3行目以降の行にカンマを追加するようになる。</p>
+      <p>+hオプションを使用すると1行目の行を除いてカンマを追加する。先頭行が項目名などの場合に使用する。+2hや+3hのように数字を指定すると、2行目または3行目以降の行にカンマを追加するようになる。</p>
 
-<pre class="cmd">
+      <pre class="cmd">
 $ cat data		←元データ：先頭行に項目(ヘッダー)がついている
-年月日 売上高 発注高 
+年月日 売上高 発注高
 20060201 296030 6710000
 20060202 1300100 3130000
 20060203 309500 20100
@@ -149,7 +159,7 @@ $ cat data		←元データ：先頭行に項目(ヘッダー)がついている
 20060206 771100 400000
 $ </pre>
 
-<pre class="cmd">
+      <pre class="cmd">
 $ comma +h 2 3 data		←先頭行を除いてカンマ変換する
 年月日 売上高 発注高
 20060201 296,030 6,710,000
@@ -160,46 +170,34 @@ $ comma +h 2 3 data		←先頭行を除いてカンマ変換する
 20060206 771,100 400,000
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>数字の文字列を直接引数に指定してカンマを追加することができる。</p>
+      <p>数字の文字列を直接引数に指定してカンマを追加することができる。</p>
 
-<pre class="cmd">$ comma -d 1234567 
+      <pre class="cmd">$ comma -d 1234567
 1,234,567
 $ </pre>
 
-<pre class="cmd">$ comma -d4 1234567 
+      <pre class="cmd">$ comma -d4 1234567
 123,4567
 $ </pre>
 
-<h3>【ワンポイント】</h3>
+      <h3>【ワンポイント】</h3>
 
-<p>データファイルの数値にcommaでカンマを追加してしまうと、それ以降は<a href="sm2.html">sm2(USP Lab(1))</a>や<a href="divsen.html">divsen(USP Lab(1))</a>などでの数値計算はできなくなる。カンマの追加はすべての計算を終えた最終成形の段階で使用する。</p>
+      <p>データファイルの数値にcommaでカンマを追加してしまうと、それ以降は<a href="sm2.html">sm2(1)</a>や<a href="divsen.html">divsen(1)</a>などでの数値計算はできなくなる。カンマの追加はすべての計算を終えた最終成形の段階で使用する。</p>
 
-<h3>【ワンポイント】</h3>
+      <h3>【ワンポイント】</h3>
 
-<p>小数桁についてはカンマを追加しない。負数も正しくカンマ処理が実施される。</p>
+      <p>小数桁についてはカンマを追加しない。負数も正しくカンマ処理が実施される。</p>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="keta.html">keta(USP Lab(1))</a></p>
-
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
+      <p><a href="keta.html">keta(1)</a></p>
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 18:47:48
-    </div>
+    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
