--- a/MANUALHTML/ctail.html
+++ b/MANUALHTML/ctail.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,28 +99,27 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>ctail(USP Lab(1))</h2>
+      <h2>ctail(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>ctail : ファイルの末尾n行を削って出力</p>
+      <p>ctail : ファイルの末尾n行を削って出力</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: ctail -n &lt;file&gt;
+      <pre class="list">Usage	: ctail -n &lt;file&gt;
 	: ctail n &lt;file&gt;
 	: ctail -&lt;n&gt;c &lt;file&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011
-          UTF-8</pre>
+UTF-8</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>引数のファイルまたは標準入力のテキストデータから、引数-n(またはn)で指定した行数の末尾行を除いて標準出力に出力する。</p>
+      <p>引数のファイルまたは標準入力のテキストデータから、引数-n(またはn)で指定した行数の末尾行を除いて標準出力に出力する。</p>
 
-<h3>【例】ファイルの末尾3行を削って表示する。</h3>
+      <h3>【例】ファイルの末尾3行を削って表示する。</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 001 北海道
 002 東北
 003 関東
@@ -121,7 +131,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 009 沖縄
 $ </pre>
 
-<pre class="cmd">$ ctail -3 data &gt; data2
+      <pre class="cmd">$ ctail -3 data &gt; data2
 $ cat data2
 001 北海道
 002 東北
@@ -131,36 +141,24 @@ $ cat data2
 006 中部
 $ </pre>
 
-<h3>【例2】ファイルの末尾nバイトを削る</h3>
+      <h3>【例2】ファイルの末尾nバイトを削る</h3>
 
-<pre class="cmd">$ echo -n abcde | ctail -1c
+      <pre class="cmd">$ echo -n abcde | ctail -1c
 abcd
 $ </pre>
 
-<pre class="cmd">$ echo -n abcde | ctail -2c
+      <pre class="cmd">$ echo -n abcde | ctail -2c
 abc
 $ </pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="getfirst.html">getfirst(USP Lab(1))</a>、<a href="getlast.html">getlast(USP Lab(1))</a>、<a href="tcat.html">tcat(USP Lab(1))</a>、<a href="ycat.html">ycat(USP Lab(1))</a></p>
-
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
+      <p><a href="getfirst.html">getfirst(1)</a>、<a href="getlast.html">getlast(1)</a>、<a href="tcat.html">tcat(1)</a>、<a href="ycat.html">ycat(1)</a></p>
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 19:25:31
-    </div>
+    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
