--- a/MANUALHTML/divsen.html
+++ b/MANUALHTML/divsen.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,25 +99,24 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>divsen(USP Lab(1))</h2>
+      <h2>divsen(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>divsen : 指定フィールドを1,000で除算</p>
+      <p>divsen : 指定フィールドを1,000で除算</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: divsen [-s] &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
+      <pre class="list">Usage	: divsen [-s] &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>引数のファイルまたは標準入力のテキストデータの数値を1,000で除算し出力する。千単位の表を作成する場合などに使用する。引数において1,000で除算する各フィールドを順に指定する。なお、小数点以下の数値は四捨五入される。-sオプションを指定すると四捨五入せず、小数点の値をそのまま出力する。</p>
+      <p>引数のファイルまたは標準入力のテキストデータの数値を1,000で除算し出力する。千単位の表を作成する場合などに使用する。引数において1,000で除算する各フィールドを順に指定する。なお、小数点以下の数値は四捨五入される。-sオプションを指定すると四捨五入せず、小数点の値をそのまま出力する。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 20060201 296030 6710000
 20060202 1300100 3130000
 20060203 309500 20100
@@ -115,7 +125,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 20060206 771100 400000
 $ </pre>
 
-<pre class="cmd">$ divsen 2 3 data		←2フィールドと3フィールドを1,000で除算
+      <pre class="cmd">$ divsen 2 3 data		←2フィールドと3フィールドを1,000で除算
 20060201 296 6710
 20060202 1300 3130
 20060203 310 20
@@ -124,9 +134,9 @@ $ </pre>
 20060206 771 400
 $ </pre>
 
-<p>-sを指定して小数点まで表示させる。こうしたデータは以降で<a href="marume.html">marume(USP Lab(1))</a>などを使って加工する。　</p>
+      <p>-sを指定して小数点まで表示させる。こうしたデータは以降で<a href="marume.html">marume(1)</a>などを使って加工する。　</p>
 
-<pre class="cmd">$ divsen -s 2 3 data		←小数点まで表示
+      <pre class="cmd">$ divsen -s 2 3 data		←小数点まで表示
 20060201 296.030 6710.000
 20060202 1300.100 3130.000
 20060203 309.500 20.100
@@ -135,31 +145,18 @@ $ </pre>
 20060206 771.100 400.000
 $ </pre>
 
-<h3>【ワンポイント】</h3>
+      <h3>【ワンポイント】</h3>
 
-<p>divsenされた結果をさらにパイプでつないでdivsenを実行すると、100万単位のデータを作成することができる。</p>
+      <p>divsenされた結果をさらにパイプでつないでdivsenを実行すると、100万単位のデータを作成することができる。</p>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="marume.html">marume(USP Lab(1))</a></p>
-
-
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
+      <p><a href="marume.html">marume(1)</a></p>
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 19:32:04
-    </div>
+    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
