--- a/MANUALHTML/index.html
+++ b/MANUALHTML/index.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,126 +99,134 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>Open usp Tukubaiコマンドマニュアル</h2>
+      <h2>Open usp Tukubaiコマンドマニュアル</h2>
 
-<h3>Open usp Tukubaiコマンド 一般コマンドマニュアル</h3>
+      <h3>Open usp Tukubaiコマンド 一般コマンドマニュアル</h3>
 
-<dl class="cmdlist">
-  <dt><a href="cgi-name.html">cgi-name(1)</a></dt>
-  <dd>CGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>に変換</dd>
-  <dt><a href="check_attr_name.html">check_attr_name(1)</a></dt>
-  <dd><a href="name-format.html">ネームファイル</a>のデータ種類を行ごとに判定</dd>
-  <dt><a href="check_need_name.html">check_need_name(1)</a></dt>
-  <dd><a href="name-format.html">ネームファイル</a>の整合性判定</dd>
-  <dt><a href="comma.html">comma(1)</a></dt>
-  <dd>指定したフィールドに3桁または4桁のカンマを追加</dd>
-  <dt><a href="count.html">count(1)</a></dt>
-  <dd> 同じキーの行数をカウント</dd>
-  <dt><a href="ctail.html">ctail(1)</a></dt>
-  <dd>ファイルの末尾n行を削って出力</dd>
-  <dt><a href="delf.html">delf(1)</a></dt>
-  <dd>指定したフィールドを除いて出力</dd>
-  <dt><a href="divsen.html">divsen(1)</a></dt>
-  <dd>指定フィールドを1,000で除算</dd>
-  <dt><a href="getfirst.html">getfirst(1)</a></dt>
-  <dd>同一キーの最初の行を出力</dd>
-  <dt><a href="getlast.html">getlast(1)</a></dt>
-  <dd>同一キーの最後の行を出力</dd>
-  <dt><a href="gyo.html">gyo(1)</a></dt>
-  <dd>行をカウント</dd>
-  <dt><a href="han.html">han(1)</a></dt>
-  <dd>半角へ変換</dd>
-  <dt><a href="join0.html">join0(1)</a></dt>
-  <dd>マスターにキーフィールドが一致する行を抽出</dd>
-  <dt><a href="join1.html">join1(1)</a></dt>
-  <dd>トランザクションファイルにマスターファイルを連結</dd>
-  <dt><a href="join2.html">join2(1)</a></dt>
-  <dd>トランザクションファイルにマスターファイルを連結</dd>
-  <dt><a href="juni.html">juni(1)</a></dt>
-  <dd>同一キー内での順位を出力</dd>
-  <dt><a href="kasan.html">kasan(1)</a></dt>
-  <dd>累計</dd>
-  <dt><a href="keta.html">keta(1)</a></dt>
-  <dd>テキストファイルの桁そろえ</dd>
-  <dt><a href="keycut.html">keycut(1)</a></dt>
-  <dd>キーでファイルを分割</dd>
-  <dt><a href="loopj.html">loopj(1)</a></dt>
-  <dd>複数のテキストファイル全行を連結</dd>
-  <dt><a href="loopx.html">loopx(1)</a></dt>
-  <dd>総掛けで連結</dd>
-  <dt><a href="map.html">map(1)</a></dt>
-  <dd>縦型ファイルを縦キー/横キー形式の表に変換</dd>
-  <dt><a href="marume.html">marume(1)</a></dt>
-  <dd>四捨五入、切り上げ、切り捨て</dd>
-  <dt><a href="mdate.html">mdate(1)</a></dt>
-  <dd>日付、週、月の処理</dd>
-  <dt><a href="mime-read.html">mime-read(1)</a></dt>
-  <dd>MIME形式のファイル読み込み</dd>
-  <dt><a href="mojihame.html">mojihame(1)</a></dt>
-  <dd>テンプレートに文字をはめ込み</dd>
-  <dt><a href="nameread.html">nameread(1)</a></dt>
-  <dd><a href="name-format.html">ネーム形式</a>のファイル読み込み</dd>
-  <dt><a href="plus.html">plus(1)</a></dt>
-  <dd>引数の足し算</dd>
-  <dt><a href="rank.html">rank(1)</a></dt>
-  <dd>行に階数を追加</dd>
-  <dt><a href="ratio.html">ratio(1)</a></dt>
-  <dd>構成比算出</dd>
-  <dt><a href="retu.html">retu(1)</a></dt>
-  <dd>列をカウント</dd>
-  <dt><a href="self.html">self(1)</a></dt>
-  <dd>指定したフィールドのデータ取り出し</dd>
-  <dt><a href="sm2.html">sm2(1)</a></dt>
-  <dd>キー単位での値の集計</dd>
-  <dt><a href="sm4.html">sm4(1)</a></dt>
-  <dd>小計、中計</dd>
-  <dt><a href="sm5.html">sm5(1)</a></dt>
-  <dd>大計</dd>
-  <dt><a href="tarr.html">tarr(1)</a></dt>
-  <dd>横型のデータを縦型に展開</dd>
-  <dt><a href="tateyoko.html">tateyoko(1)</a></dt>
-  <dd>縦テキストを横テキストへ変換</dd>
-  <dt><a href="tcat.html">tcat(1)</a></dt>
-  <dd>ファイルを縦へ並べ替え</dd>
-  <dt><a href="unmap.html">unmap(1)</a></dt>
-  <dd>縦キー/横キー形式の表データを縦型ファイルに変換</dd>
-  <dt><a href="up3.html">up3(1)</a></dt>
-  <dd>2つのファイルを同一キーフィールドでマージ</dd>
-  <dt><a href="yarr.html">yarr(1)</a></dt>
-  <dd>縦型のデータを横型に展開</dd>
-  <dt><a href="ycat.html">ycat(1)</a></dt>
-  <dd>ファイルの横連結</dd>
-  <dt><a href="yobi.html">yobi(1)</a></dt>
-  <dd>曜日算出</dd>
-  <dt><a href="ysum.html">ysum(1)</a></dt>
-  <dd>横集計</dd>
-  <dt><a href="zen.html">zen(1)</a></dt>
-  <dd>全角へ変換</dd>
-</dl>
+      <dl class="cmdlist">
+        <dt><a href="calclock.html">calclock(1)</a></dt>
+        <dd>日付と時刻を秒数に変換</dd>
+        <dt><a href="cgi-name.html">cgi-name(1)</a></dt>
+        <dd>CGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>に変換</dd>
+        <dt><a href="check_attr_name.html">check_attr_name(1)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>のデータ種類を行ごとに判定</dd>
+        <dt><a href="check_need_name.html">check_need_name(1)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>の整合性判定</dd>
+        <dt><a href="cjoin0.html">cjoin0(1)</a></dt>
+        <dd><a href="master-file.html">マスタファイル</a>にキーフィールドが一致する<a href="transaction-file.html">トランザクションファイル</a>の行を抽出(未整列可)</dd>
+        <dt><a href="cjoin1.html">cjoin1(1)</a></dt>
+        <dd><a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(一致行のみ、未整列可)</dd>
+        <dt><a href="cjoin2.html">cjoin2(1)</a></dt>
+        <dd><a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(不一致はダミーへ置換、未整列可)</dd>
+        <dt><a href="comma.html">comma(1)</a></dt>
+        <dd>指定したフィールドに3桁または4桁のカンマを追加</dd>
+        <dt><a href="count.html">count(1)</a></dt>
+        <dd> 同じキーの行数をカウント</dd>
+        <dt><a href="ctail.html">ctail(1)</a></dt>
+        <dd>ファイルの末尾n行を削って出力</dd>
+        <dt><a href="dayslash.html">dayslash(1)</a></dt>
+        <dd>日付と時刻のフォーマット変換</dd>
+        <dt><a href="delf.html">delf(1)</a></dt>
+        <dd>指定したフィールドを除いて出力</dd>
+        <dt><a href="divsen.html">divsen(1)</a></dt>
+        <dd>指定フィールドを1,000で除算</dd>
+        <dt><a href="filehame.html">filehame(1)</a></dt>
+        <dd>テンプレートにファイルをはめ込み</dd>
+        <dt><a href="formhame.html">formhame(1)</a></dt>
+        <dd>HTML テンプレートに文字をはめ込む</dd>
+        <dt><a href="getfirst.html">getfirst(1)</a></dt>
+        <dd>同一キーの最初の行を出力</dd>
+        <dt><a href="getlast.html">getlast(1)</a></dt>
+        <dd>同一キーの最後の行を出力</dd>
+        <dt><a href="gyo.html">gyo(1)</a></dt>
+        <dd>行をカウント</dd>
+        <dt><a href="han.html">han(1)</a></dt>
+        <dd>半角へ変換</dd>
+        <dt><a href="join0.html">join0(1)</a></dt>
+        <dd><a href="master-file.html">マスタファイル</a>にキーフィールドが一致する<a href="transaction-file.html">トランザクションファイル</a>の行を抽出</dd>
+        <dt><a href="join1.html">join1(1)</a></dt>
+        <dd><a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(一致行のみ)</dd>
+        <dt><a href="join2.html">join2(1)</a></dt>
+        <dd><a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(不一致はダミーへ置換)</dd>
+        <dt><a href="juni.html">juni(1)</a></dt>
+        <dd>同一キー内での順位を出力</dd>
+        <dt><a href="kasan.html">kasan(1)</a></dt>
+        <dd>累計</dd>
+        <dt><a href="keta.html">keta(1)</a></dt>
+        <dd>テキストデータの桁そろえ</dd>
+        <dt><a href="keycut.html">keycut(1)</a></dt>
+        <dd>キーでファイルを分割</dd>
+        <dt><a href="loopj.html">loopj(1)</a></dt>
+        <dd>複数のテキストファイル全行を連結</dd>
+        <dt><a href="loopx.html">loopx(1)</a></dt>
+        <dd>総掛けで連結</dd>
+        <dt><a href="map.html">map(1)</a></dt>
+        <dd>縦型ファイルを縦キー/横キー形式の表に変換</dd>
+        <dt><a href="marume.html">marume(1)</a></dt>
+        <dd>四捨五入、切り上げ、切り捨て</dd>
+        <dt><a href="mdate.html">mdate(1)</a></dt>
+        <dd>日付、週、月の処理</dd>
+        <dt><a href="mime-read.html">mime-read(1)</a></dt>
+        <dd>MIME形式のファイル読み込み</dd>
+        <dt><a href="mojihame.html">mojihame(1)</a></dt>
+        <dd>テンプレートに文字をはめ込み</dd>
+        <dt><a href="nameread.html">nameread(1)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>データの読み込み</dd>
+        <dt><a href="plus.html">plus(1)</a></dt>
+        <dd>引数の足し算</dd>
+        <dt><a href="rank.html">rank(1)</a></dt>
+        <dd>行に階数を追加</dd>
+        <dt><a href="ratio.html">ratio(1)</a></dt>
+        <dd>構成比算出</dd>
+        <dt><a href="retu.html">retu(1)</a></dt>
+        <dd>列をカウント</dd>
+        <dt><a href="self.html">self(1)</a></dt>
+        <dd>指定したフィールドのデータ取り出し</dd>
+        <dt><a href="sm2.html">sm2(1)</a></dt>
+        <dd>キー単位での値の集計</dd>
+        <dt><a href="sm4.html">sm4(1)</a></dt>
+        <dd>小計、中計</dd>
+        <dt><a href="sm5.html">sm5(1)</a></dt>
+        <dd>大計</dd>
+        <dt><a href="tarr.html">tarr(1)</a></dt>
+        <dd>横型のデータを縦型に展開</dd>
+        <dt><a href="tateyoko.html">tateyoko(1)</a></dt>
+        <dd>縦テキストを横テキストへ変換</dd>
+        <dt><a href="tcat.html">tcat(1)</a></dt>
+        <dd>ファイルを縦へ並べ替え</dd>
+        <dt><a href="unmap.html">unmap(1)</a></dt>
+        <dd>縦キー/横キー形式の表データを縦型データに変換</dd>
+        <dt><a href="up3.html">up3(1)</a></dt>
+        <dd>2つのファイルを同一キーフィールドでマージ</dd>
+        <dt><a href="yarr.html">yarr(1)</a></dt>
+        <dd>縦型のデータを横型に展開</dd>
+        <dt><a href="ycat.html">ycat(1)</a></dt>
+        <dd>ファイルの横連結</dd>
+        <dt><a href="yobi.html">yobi(1)</a></dt>
+        <dd>曜日算出</dd>
+        <dt><a href="ysum.html">ysum(1)</a></dt>
+        <dd>横集計</dd>
+        <dt><a href="zen.html">zen(1)</a></dt>
+        <dd>全角へ変換</dd>
+      </dl>
 
-<h3>Open usp Tukubaiコマンド ファイル形式マニュアル</h3>
+      <h3>Open usp Tukubaiコマンド ファイル形式マニュアル</h3>
 
-<dl class="cmdlist">
-  <dt><a href="field-format.html">フィールド形式(5)</a></dt>
-  <dd>空白区切りのテキストファイル</dd>
-  <dt><a href="name-format.html">ネーム形式(5)</a></dt>
-  <dd>空白区切りの2フィールドテキストファイル</dd>
-  <dt><a href="tag-format.html">タグ形式(5)</a></dt>
-  <dd>1行目にヘッダがついた<a href="field-format.html">フィールド形式</a></dd>
-</dl>
+      <dl class="cmdlist">
+        <dt><a href="field-format.html">フィールド形式(5)</a></dt>
+        <dd>空白区切りのテキストデータ形式</dd>
+        <dt><a href="name-format.html">ネーム形式(5)</a></dt>
+        <dd>空白区切りの2フィールドテキストデータ形式</dd>
+        <dt><a href="tag-format.html">タグ形式(5)</a></dt>
+        <dd>1行目にヘッダがついた<a href="field-format.html">フィールド形式</a></dd>
+      </dl>
 
-<!-- CONTENTS_CONTENTS -->
-    </div>
+      <dl class="cmdlist">
+        <dt><a href="master-file.html">マスタファイル(5)</a></dt>
+        <dd>マスタの特性を満たす<a href="field-format.html">フィールド形式</a>のファイル</dd>
+        <dt><a href="name-file.html">ネームファイル(5)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>のファイル</dd>
+        <dt><a href="transaction-file.html">トランザクションファイル(5)</a></dt>
+        <dd>トランザクションの特性を満たす<a href="field-format.html">フィールド形式</a>のファイル</dd>
+      </dl>
 
-    <div id="lastmodified">
-     last modified: 2012-05-03 11:53:43
-    </div>
-
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
-  </div>
-</body>
-</html>
