--- a/MANUALHTML/join0.html
+++ b/MANUALHTML/join0.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,40 +99,43 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>join0(USP Lab(1))</h2>
+      <h2>join0(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>join0 : マスターにキーフィールドが一致する行を抽出</p>
+      <p>join0 : <a href="master-file.html">マスタファイル</a>にキーフィールドが一致する<a href="transaction-file.html">トランザクションファイル</a>の行を抽出</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: join0 [+ng[&lt;fd&gt;]] key=&lt;n&gt; &lt;master&gt; &lt;tran&gt;
+      <pre class="list">Usage	: join0 [+ng[&lt;fd&gt;]] key=&lt;n&gt; &lt;<a href="master-file.html">master</a>&gt; &lt;<a href="transaction-file.html">tran</a>&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>テキストファイルtranのkey=&lt;n&gt;で指定したキーフィールドがマスターファイルmasterの第1フィールド(キーフィールド)と一致した行のみtranから抽出して出力する。</p>
+      <p><a href="transaction-file.html">tran</a>のkey=&lt;n&gt;で指定したキーフィールドが<a href="master-file.html">master</a>の第1フィールド(キーフィールド)と一致した行のみ<a href="transaction-file.html">tran</a>から抽出して出力する。</p>
 
-<p>masterの第1フィールドおよびtranの第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。さらに、masterについてはキーフィールド(第1フィールド)について、各行がユニークでなければならない(第1フィールドが同じ値をもつ行が複数あってはならない)。tranについてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値を行はいくつあっても構わない。</p>
+      <p><a href="master-file.html">master</a>に-を指定すると標準入力を<a href="master-file.html">マスタファイル</a>とする。<a href="transaction-file.html">tran</a>が無指定かまたは-が指定されている場合には、標準入力が<a href="transaction-file.html">トランザクションファイル</a>となる。</p>
 
-<p>キーに選択するフィールドは複数指定することも可能。</p>
+      <p><a href="master-file.html">master</a>の第1フィールドおよび<a href="transaction-file.html">tran</a>の第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。また、<a href="master-file.html">master</a>のキーフィールド(第1フィールド)はユニークでなければならない。(第1フィールドが同じ値をもつ行が複数あってはならない)。<a href="transaction-file.html">tran</a>についてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値を行はいくつあっても構わない。</p>
 
-<p>+ng オプションをつけると、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ&lt;fd&gt;のファイルへ出力する。&lt;fd&gt;を省略した場合は標準エラー出力ファイルへ出力する。</p>
+      <p>キーに選択するフィールドは複数指定することもできる。たとえばkey=3/5のように指定した場合、<a href="transaction-file.html">tran</a>の第3、第4、第5フィールドを意味するようになる。またこの場合、<a href="master-file.html">master</a>のキーは第1、第2、第3フィールドとなる。いずれも、指定したkeyについて<a href="master-file.html">master</a>も<a href="transaction-file.html">tran</a>も整列されている必要がある。</p>
 
-<h3>【例1】基本パターン</h3>
+      <p>+ngオプションをつけると、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ&lt;fd&gt;のファイルへ出力する。&lt;fd&gt;を省略した場合は標準エラー出力ファイルへ出力する。</p>
 
-<p>成績ファイルkekkaからmasterに登録されている4人のデータを抽出する。</p>
+      <p><a href="transaction-file.html">tran</a>でキーが整列されていないものはjoin0(1)では処理できない。その場合は一旦<a href="transaction-file.html">tran</a>を整列してからjoin0(1)で処理するか、join0(1)のかわりに<a href="cjoin0.html">cjoin0(1)</a>を使って処理すればよい。</p>
 
-<pre class="cmd">$ cat master
+      <h3>【例1】基本パターン</h3>
+
+      <p>成績ファイルkekkaから<a href="master-file.html">master</a>に登録されている4人のデータを抽出する。</p>
+
+      <pre class="cmd">$ cat <a href="master-file.html">master</a>
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
 $ </pre>
 
-<pre class="cmd">$ cat kekka
+      <pre class="cmd">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -134,27 +148,27 @@ $ </pre>
 0000011 92 56 83 96 75
 $ </pre>
 
-<p>kekkaの第1フィールドがmasterファイルに存在する行のみ抽出する。</p>
+      <p>kekkaの第1フィールドが<a href="master-file.html">master</a>ファイルに存在する行のみ抽出する。</p>
 
-<pre class="cmd">$ join0 key=1 master kekka
+      <pre class="cmd">$ join0 key=1 <a href="master-file.html">master</a> kekka
 0000003 30 50 71 36 30
 0000005 82 79 16 21 80
 0000007 50 2  33 15 62
 0000010 95 60 35 93 76
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>左から順に複数のフィールドに連続するキーを指定できる。例えばmasterファイルに第2フィールドと第3フィールドの順にフィールドキーが存在する行のみ抽出する場合、次のようになる。</p>
+      <p>左から順に複数のフィールドに連続するキーを指定できる。例えば<a href="master-file.html">master</a>ファイルに第2フィールドと第3フィールドの順にフィールドキーが存在する行のみ抽出する場合、次のようになる。</p>
 
-<pre class="cmd">$ cat master
+      <pre class="cmd">$ cat <a href="master-file.html">master</a>
 A 0000003 杉山______ 26 F
 A 0000005 崎村______ 50 F
 B 0000007 梶川______ 42 F
 C 0000010 柳本______ 50 F
 $ </pre>
 
-<pre class="cmd">$ cat kekka
+      <pre class="cmd">$ cat kekka
 1 A 0000000 91 59 20 76 54
 2 A 0000001 46 39 8  5  21
 3 A 0000003 30 50 71 36 30
@@ -167,29 +181,29 @@ $ </pre>
 10 C 0000011 92 56 83 96 75
 $ </pre>
 
-<pre class="cmd">$ join0 key=2/3 master kekka &gt; data
+      <pre class="cmd">$ join0 key=2/3 <a href="master-file.html">master</a> kekka &gt; data
 3 A 0000003 30 50 71 36 30
 5 A 0000005 82 79 16 21 80
 6 B 0000007 50 2  33 15 62
 9 C 0000010 95 60 35 93 76
 $ </pre>
 
-<p>左から順に連続していない複数のフィールドをキーに指定することも可能。この場合は複数のキーフィールドを@でつなげて指定する。</p>
+      <p>左から順に連続していない複数のフィールドをキーに指定することも可能。この場合は複数のキーフィールドを@でつなげて指定する。</p>
 
-<pre class="cmd">$ join0 key=3@1 master tran</pre>
+      <pre class="cmd">$ join0 key=3@1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a></pre>
 
-<h3>【例3】+ngオプション</h3>
+      <h3>【例3】+ngオプション</h3>
 
-<p>masterとキーが一致しない"tran"の行を抽出することも可能。キーに一致する行は標準出力に、一致しない行は標準エラー出力に出力される。</p>
+      <p><a href="master-file.html">master</a>とキーが一致しない"<a href="transaction-file.html">tran</a>"の行を抽出することも可能。キーに一致する行は標準出力に、一致しない行は標準エラー出力に出力される。</p>
 
-<pre class="cmd">$ cat master
+      <pre class="cmd">$ cat <a href="master-file.html">master</a>
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
 $ </pre>
 
-<pre class="cmd">$ cat kekka
+      <pre class="cmd">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -202,9 +216,9 @@ $ </pre>
 0000011 92 56 83 96 75
 $ </pre>
 
-<p>成績ファイルkekkaからmasterに存在する4人のデータと、その他のデータとをそれぞれ抽出する。</p>
+      <p>成績ファイルkekkaから<a href="master-file.html">master</a>に存在する4人のデータと、その他のデータとをそれぞれ抽出する。</p>
 
-<pre class="cmd">$ join0 +ng key=1 master kekka &gt; ok-data 2&gt; ng-data
+      <pre class="cmd">$ join0 +ng key=1 <a href="master-file.html">master</a> kekka &gt; ok-data 2&gt; ng-data
 $ cat ok-data		←一致したデータ
 0000003 30 50 71 36 30
 0000005 82 79 16 21 80
@@ -219,56 +233,45 @@ $ cat ng-data		←一致しなかったデータ
 0000011 92 56 83 96 75
 $ </pre>
 
-<h3>【例4】</h3>
+      <h3>【例4】</h3>
 
-<p>ファイル名を-にすることにより標準入力からmasterやtranを読むことができる。<a href="join1.html">join1(USP Lab(1))</a>や<a href="join2.html">join2(USP Lab(1))</a>も同様。tranの-を省略した場合も標準入力からtranを読み込む。</p>
+      <p>ファイル名を-にすることにより標準入力から<a href="master-file.html">master</a>や<a href="transaction-file.html">tran</a>を読むことができる。<a href="join1.html">join1(1)</a>や<a href="join2.html">join2(1)</a>も同様。<a href="transaction-file.html">tran</a>の-を省略した場合も標準入力から<a href="transaction-file.html">tran</a>を読み込む。</p>
 
-<pre class="cmd">$ cat master | join0 key=1 - tran</pre>
+      <pre class="cmd">$ cat <a href="master-file.html">master</a> | join0 key=1 - <a href="transaction-file.html">tran</a></pre>
 
-<pre class="cmd">$ cat tran | join0 key=1 master -</pre>
+      <pre class="cmd">$ cat <a href="transaction-file.html">tran</a> | join0 key=1 <a href="master-file.html">master</a> -</pre>
 
-<pre class="cmd">$ cat tran | join0 key=1 master		←-を省略可能</pre>
+      <pre class="cmd">$ cat <a href="transaction-file.html">tran</a> | join0 key=1 <a href="master-file.html">master</a>		←-を省略可能</pre>
 
-<h3>【コラム1】+ngオプションのコメント - <a href="join1.html">join1(USP Lab(1))</a>も同様</h3>
+      <h3>【コラム1】+ngオプションのコメント - <a href="join1.html">join1(1)</a>も同様</h3>
 
-<p>不一致のデータをパイプで次のコマンドへつなぐ場合は次のように記述する。</p>
+      <p>不一致のデータをパイプで次のコマンドへつなぐ場合は次のように記述する。</p>
 
-<pre class="cmd">$ join0 +ng key=1 master tran 2&gt;&amp;1 1&gt; ok-data | 次のコマンド</pre>
+      <pre class="cmd">$ join0 +ng key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a> 2&gt;&amp;1 1&gt; ok-data |  次のコマンド</pre>
 
-<p>不一致のデータのみ出力したい場合には、一致データを/dev/nullへ出力させれば良い。</p>
+      <p>不一致のデータのみ出力したい場合には、一致データを/dev/nullへ出力させれば良い。</p>
 
-<pre class="cmd">$ join0 +ng key=1 master tran &gt; /dev/null 2&gt; ng-data</pre>
+      <pre class="cmd">$ join0 +ng key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a> &gt; /dev/null 2&gt; ng-data</pre>
 
-<h3>【コラム2】</h3>
+      <h3>【コラム2】</h3>
 
-<p><a href="join0.html">join0(USP Lab(1))</a>および<a href="join1.html">join1(USP Lab(1))</a>はmasterと同じキーフィールドを持つtranの行を出力するが、パイプの目詰まりを起こさないようにmasterを読み終わったあと読み残したtranについても最後まで読むように動作する。</p>
+      <p><a href="join0.html">join0(1)</a>および<a href="join1.html">join1(1)</a>は<a href="master-file.html">master</a>と同じキーフィールドを持つ<a href="transaction-file.html">tran</a>の行を出力するが、パイプの目詰まりを起こさないように<a href="master-file.html">master</a>を読み終わったあと読み残した<a href="transaction-file.html">tran</a>についても最後まで読むように動作する。</p>
 
-<pre class="cmd">$ cat bigfile | join0 key=1 master &gt; ok-data</pre>
+      <pre class="cmd">$ cat bigfile | join0 key=1 <a href="master-file.html">master</a> &gt; ok-data</pre>
 
-<h3>【備考】</h3>
+      <h3>【備考】</h3>
 
-<p>keyのフィールドは合わせて128フィールドが最大で、1キーフィールドあたり最大256[byte]まで指定できる。</p>
+      <p>keyのフィールドは合わせて128フィールドが最大で、1キーフィールドあたり最大256[byte]まで指定できる。</p>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="join1.html">join1(USP Lab(1))</a>、<a href="join2.html">join2(USP Lab(1))</a></p>
+      <p><a href="cjoin0.html">cjoin0(1)</a>、<a href="cjoin1.html">cjoin1(1)</a>、<a href="cjoin2.html">cjoin2(1)</a>、<a href="join1.html">join1(1)</a>、<a href="join2.html">join2(1)</a>、<a href="loopj.html">loopj(1)</a>、<a href="loopx.html">loopx(1)</a>、<a href="up3.html">up3(1)</a>、<a href="master-file.html">マスタファイル(5)</a>、<a href="transaction-file.html">トランザクションファイル(5)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 19:49:31
-    </div>
+    <div id="lastmodified">last modified: 2012-04-02 11:08:02</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
