--- a/MANUALHTML/keta.html
+++ b/MANUALHTML/keta.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,30 +99,29 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>keta(USP Lab(1))</h2>
+      <h2>keta(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>keta : テキストファイルの桁そろえ</p>
+      <p>keta : テキストファイルの桁そろえ</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: keta n1 n2 .. &lt;filename&gt;
+      <pre class="list">Usage	: keta n1 n2 .. &lt;filename&gt;
 	: keta -v &lt;filename&gt;
 	: keta [--] &lt;filename&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011
 	: UTF-8</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>引数のファイルまたは標準入力のテキストデータの各フィールドの桁数をそろえて出力する。各フィールドの桁数を自動的に判断して出力できるほか、フィールド毎の桁を指定して出力することが可能。</p>
+      <p>引数のファイルまたは標準入力のテキストデータの各フィールドの桁数をそろえて出力する。各フィールドの桁数を自動的に判断して出力できるほか、フィールド毎の桁を指定して出力することが可能。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<p>引数で指定したファイルの各フィールド毎に最大桁数を判断して桁数を自動出力する。</p>
+      <p>引数で指定したファイルの各フィールド毎に最大桁数を判断して桁数を自動出力する。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -120,7 +130,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 04 神奈川県 13 横浜市 92 56 83 96 75
 $ </pre>
 
-<pre class="cmd">$ keta data		←右詰め
+      <pre class="cmd">$ keta data		←右詰め
 01   埼玉県 01 さいたま市 91 59 20 76 54
 01   埼玉県 02     川越市 46 39  8  5 21
 01   埼玉県 03     熊谷市 82  0 23 84 10
@@ -129,7 +139,7 @@ $ </pre>
 04 神奈川県 13     横浜市 92 56 83 96 75
 $ </pre>
 
-<pre class="cmd">$ keta -- data		←左詰め
+      <pre class="cmd">$ keta -- data		←左詰め
 01 埼玉県   01 さいたま市 91 59 20 76 54
 01 埼玉県   02 川越市     46 39 8  5  21
 01 埼玉県   03 熊谷市     82 0  23 84 10
@@ -138,25 +148,25 @@ $ </pre>
 04 神奈川県 13 横浜市     92 56 83 96 75
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>各フィールド毎の桁数を指定して出力する。引数としてファイルの各フィールドの1番目から最終フィールドまでのそれぞれの桁数を順に指定する。</p>
+      <p>各フィールド毎の桁数を指定して出力する。引数としてファイルの各フィールドの1番目から最終フィールドまでのそれぞれの桁数を順に指定する。</p>
 
-<pre class="list">	        ↓2フィールド目の桁数
-	keta n1 n2 n3 ・・・・nNF 
+      <pre class="list">	        ↓2フィールド目の桁数
+	keta n1 n2 n3 ・・・・nNF
 	     ↑               ↑
 	1フィールド目の桁数  最終フィールド目の桁数</pre>
 
 
-<p>なお、桁数は半角での文字数で指定する。大文字の場合は半角2文字分の指定が必要である。keta 4は半角では4文字分、全角では2文字分になる。次のコマンドで例1と同じ出力が得られる。</p> 
+      <p>なお、桁数は半角での文字数で指定する。大文字の場合は半角2文字分の指定が必要である。keta 4は半角では4文字分、全角では2文字分になる。次のコマンドで例1と同じ出力が得られる。</p>
 
-<pre class="cmd">$ keta 2 8 2 10 2 2 2 2 2 data</pre>
+      <pre class="cmd">$ keta 2 8 2 10 2 2 2 2 2 data</pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>通常は桁は右詰めで出力されるが、左詰めで出力する場合は桁数に-をつけて指定すれば良い。例えば第2フィールドと第4フィールドを左詰めにして出力するには次のようにコマンドを実行する。</p>
+      <p>通常は桁は右詰めで出力されるが、左詰めで出力する場合は桁数に-をつけて指定すれば良い。例えば第2フィールドと第4フィールドを左詰めにして出力するには次のようにコマンドを実行する。</p>
 
-<pre class="cmd">$ keta 2 -8 2 -10 2 2 2 2 2 data 
+      <pre class="cmd">$ keta 2 -8 2 -10 2 2 2 2 2 data
 01 埼玉県   01 さいたま市 91 59 20 76 54
 01 埼玉県   02 川越市     46 39  8  5 21
 01 埼玉県   03 熊谷市     82  0 23 84 10
@@ -165,46 +175,35 @@ $ </pre>
 04 神奈川県 13 横浜市     92 56 83 96 7
 $ </pre>
 
-<h3>【例4】</h3>
+      <h3>【例4】</h3>
 
-<p>同じ桁数を連続したフィールドに指定する場合は&lt;桁数x連続するフィールド数&gt;と表記することができる。keta 3x4はketa 3 3 3 3と同じ意味を持つ。フィールド数にはNF(1行のフィールド数)を使用しNF-xxと指定できる。次のコマンドで例3と同じ出力が得られる。</p>
+      <p>同じ桁数を連続したフィールドに指定する場合は&lt;桁数x連続するフィールド数&gt;と表記することができる。keta 3x4はketa 3 3 3 3と同じ意味を持つ。フィールド数にはNF(1行のフィールド数)を使用しNF-xxと指定できる。次のコマンドで例3と同じ出力が得られる。</p>
 
-<pre class="cmd">$ keta 2 -8 2 -10 2x5 data</pre>
+      <pre class="cmd">$ keta 2 -8 2 -10 2x5 data</pre>
 
-<pre class="cmd">$ keta 2 -8 2 -10 2xNF-4 data</pre>
+      <pre class="cmd">$ keta 2 -8 2 -10 2xNF-4 data</pre>
 
-<h3>【例5】</h3>
+      <h3>【例5】</h3>
 
-<p>-vオプションを使用するとファイルの各フィールドの最大桁数を表示させることができる。</p>
+      <p>-vオプションを使用するとファイルの各フィールドの最大桁数を表示させることができる。</p>
 
-<pre class="cmd">$ keta -v data
+      <pre class="cmd">$ keta -v data
 2 8 2 10 2 2 2 2 2
 $ </pre>
 
-<p>次のコマンドで例1と同じ出力が得られる。</p>
+      <p>次のコマンドで例1と同じ出力が得られる。</p>
 
-<pre class="cmd">$ keta $(keta -v data) data</pre>
+      <pre class="cmd">$ keta $keta -v data) data</pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="comma.html">comma(USP Lab(1))</a></p>
+      <p><a href="comma.html">comma(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 19:14:12
-    </div>
+    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
