--- a/MANUALHTML/loopx.html
+++ b/MANUALHTML/loopx.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,42 +99,41 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>loopx(USP Lab(1))</h2>
+      <h2>loopx(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>loopx : 総掛けで連結</p>
+      <p>loopx : 総掛けで連結</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: loopx &lt;file1&gt; &lt;file2&gt; ...
+      <pre class="list">Usage	: loopx &lt;file1&gt; &lt;file2&gt; ...
 Version	: Thu Jan 12 18:35:55 JST 2012</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>複数のファイルの各行に対して、総てのパターンの掛けあわせを作り連結して出力する。出力は指定ファイル順に行が総掛けされる。&lt;file1&gt;の各行に対し&lt;file2&gt;の行が総掛けされ、その結果の各行に対し&lt;file3&gt;の行が総掛けされるという順番に出力される。</p>
+      <p>複数のファイルの各行に対して、総てのパターンの掛けあわせを作り連結して出力する。出力は指定ファイル順に行が総掛けされる。&lt;file1&gt;の各行に対し&lt;file2&gt;の行が総掛けされ、その結果の各行に対し&lt;file3&gt;の行が総掛けされるという順番に出力される。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<p>ファイルdata1、data2、data3を総掛けすると、例えば次のようになる。</p>
+      <p>ファイルdata1、data2、data3を総掛けすると、例えば次のようになる。</p>
 
-<pre class="cmd">$ cat data1
+      <pre class="cmd">$ cat data1
 1 農業
 2 工業
 $ </pre>
 
-<pre class="cmd">$ cat data2
+      <pre class="cmd">$ cat data2
 A 東京
 B 大阪
 $ </pre>
 
-<pre class="cmd">$ cat data3
+      <pre class="cmd">$ cat data3
 晴
 雨
 $ </pre>
 
-<pre class="cmd">$ loopx data1 data2 data3
+      <pre class="cmd">$ loopx data1 data2 data3
 1 農業 A 東京 晴
 1 農業 A 東京 雨
 1 農業 B 大阪 晴
@@ -134,26 +144,16 @@ $ </pre>
 2 工業 B 大阪 雨
 $ </pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="loopj.html">loopj(USP Lab(1))</a></p>
+      <p><a href="join0.html">join0(1)</a>、<a href="join1.html">join1(1)</a>、<a href="join2.html">join2(1)</a>、<a href="loopj.html">loopj(1)</a>、<a href="up3.html">up3(1)</a>、<a href="master-file.html">マスタファイル(5)</a>、<a href="transaction-file.html">トランザクションファイル(5)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
+
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 20:28:55
-    </div>
+    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
