--- a/MANUALHTML/master-file.html
+++ b/MANUALHTML/master-file.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -31,14 +29,21 @@
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -98,7 +103,7 @@
 
       <h3>【名前】</h3>
 
-      <p>マスタファイル : マスタの性質を満たす<a href="field-format.html">フィールド形式</a>のファイル</p>
+      <p>マスタファイル : マスタの性質を満たす<a href="field-format.html">フィールド形式(5)</a>のファイル</p>
 
       <h3>【書式】</h3>
 
@@ -109,7 +114,7 @@
 
       <p>それぞれの行がIDなどで管理され重複する行がなく、データの更新もあらかじめ定められたタイミングでのみ実施され、随時データの変更が入ったり、逐次データが追加されるといったことがなく、商品や店、都道府県、市区町村などデータ処理中に主要なデータとして出現するようなデータを一般的にマスタと呼んでいる。</p>
 
-      <p><a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>では、マスタに該当する<a href="field-format.html">フィールド形式</a>のファイルをマスタファイルと呼んでいる。マスタの特性以外に、<a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>におけるマスタファイルは次の特性を満たしている必要がある。</p>
+      <p><a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>では、マスタに該当する<a href="field-format.html">フィールド形式(5)</a>のファイルをマスタファイル(5)と呼んでいる。マスタの特性以外に、<a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>におけるマスタファイル(5)は次の特性を満たしている必要がある。</p>
 
       <ul>
       <li>第1フィールドまたは第1フィールドから連続するいくつかのフィールドがキーフィールドになっている。</li>
@@ -118,9 +123,9 @@
       <li>キーフィールドがLANG=C sortで整列されている。</li>
       </ul>
 
-      <p>たとえば第1フィールドが店番号、第2フィールドが店名で構成される2フィールドの<a href="field-format.html">フィールド形式</a>のファイルで、第1フィールドの値がLANG=C sortで整列されたファイルはマスタファイルと呼ばれる。</p>
+      <p>たとえば第1フィールドが店番号、第2フィールドが店名で構成される2フィールドの<a href="field-format.html">フィールド形式(5)</a>のファイルで、第1フィールドの値がLANG=C sortで整列されたファイルはマスタファイル(5)と呼ばれる。</p>
 
-      <p>マスタファイルは短縮してマスタと呼ばれることがあり、また、<a href="index.html">Tukubaiコマンドマニュアル</a>ではmasterと表記される。マスタファイルとは対照的に随時データが追加されるようなフィールド形式のファイルは<a href="transaction-file.html">トランザクションファイル</a>と呼ばれている。</p>
+      <p>マスタファイル(5)は短縮してマスタと呼ばれることがあり、また、<a href="index.html">Tukubaiコマンドマニュアル</a>ではmasterと表記される。マスタファイル(5)とは対照的に随時データが追加されるようなフィールド形式(5)のファイルは<a href="transaction-file.html">トランザクションファイル(5)</a>と呼ばれている。</p>
 
       <h3>【例1】</h3>
 
@@ -145,9 +150,9 @@
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-08-01 16:19:55</div>
+    <div id="lastmodified">last modified: 2013-56-15 19:04:15</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
