--- a/MANUALHTML/name-format.html
+++ b/MANUALHTML/name-format.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -31,14 +29,21 @@
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -107,9 +112,9 @@
 
       <h3>【説明】</h3>
 
-      <p>空白区切りの2フィールドテキストデータ形式。<a href="field-format.html">フィールド形式(5)</a>の特殊な形式の1つ。第2フィールドに含まれる空白は区切り文字としては解釈されない。ネーム形式のファイルは<a href="name-file.html">ネームファイル</a>と呼ばれる。</p>
+      <p>空白区切りの2フィールドテキストデータ形式。<a href="field-format.html">フィールド形式(5)</a>の特殊な形式の1つ。第2フィールドに含まれる空白は区切り文字としては解釈されない。ネーム形式のファイルは<a href="name-file.html">ネームファイル(5)</a>と呼ばれる。</p>
 
-      <p><a href="name-file.html">ネームファイル</a>は主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>コマンドを使用することでネーム形式へ変換することができる。ネーム形式を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
+      <p><a href="name-file.html">ネームファイル(5)</a>は主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>を使用することでネーム形式(5)へ変換することができる。ネーム形式を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
 
       <h3>【例1】</h3>
 
@@ -121,7 +126,7 @@ VALUE 0.845814</pre>
 
       <h3>【例2】</h3>
 
-      <p>ネーム形式では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
+      <p>ネーム形式(5)では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
 
       <pre class="source">ID 0000 001
 DATE 2011 10/08
@@ -137,9 +142,9 @@ VALUE 1 - 0.845814</pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-08-01 16:19:55</div>
+    <div id="lastmodified">last modified: 2013-03-15 20:04:15</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
