--- a/MANUALHTML/retu.html
+++ b/MANUALHTML/retu.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,25 +99,24 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>retu(USP Lab(1))</h2>
+      <h2>retu(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>retu : 列をカウント</p>
+      <p>retu : 列をカウント</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: retu [-f] &lt;file&gt; ...
+      <pre class="list">Usage	: retu [-f] &lt;file&gt; ...
 Version	: Fri Oct 21 11:26:06 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>引数のファイルまたは標準入力のテキストデータの列数(フィールド数)をカウントして出力する。</p>
+      <p>引数のファイルまたは標準入力のテキストデータの列数(フィールド数)をカウントして出力する。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 0000000 浜地______ 50 F 91 59 20 76 54
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -115,33 +125,33 @@ Version	: Fri Oct 21 11:26:06 JST 2011</pre>
 0000007 梶川______ 42 F 50 2  33 15 62
 $ </pre>
 
-<pre class="cmd">$ retu data
+      <pre class="cmd">$ retu data
 9
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>複数のファイルの列数(フィールド数)を一度にカウントできる。 同一ファイル内に違う列数の行があると、列数が変化した時点で列数を出力する。-fオプションをつけるとファイル名も出力される。</p>
+      <p>複数のファイルの列数(フィールド数)を一度にカウントできる。 同一ファイル内に違う列数の行があると、列数が変化した時点で列数を出力する。-fオプションをつけるとファイル名も出力される。</p>
 
-<pre class="cmd">$ cat data1
+      <pre class="cmd">$ cat data1
 1 file1
 2 file1
 3 file1
 $ </pre>
 
-<pre class="cmd">$ cat data2
+      <pre class="cmd">$ cat data2
 1 file2
 2
 $ </pre>
 
-<pre class="cmd">$ cat data3
+      <pre class="cmd">$ cat data3
 1
 2 file3
 3
 4 file3
 $ </pre>
 
-<pre class="cmd">$ retu data1 data2 data3
+      <pre class="cmd">$ retu data1 data2 data3
 2
 2
 1
@@ -151,11 +161,11 @@ $ </pre>
 2
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>-fオプションを使用するとファイル名と行数をそれぞれ表示する。</p>
+      <p>-fオプションを使用するとファイル名と行数をそれぞれ表示する。</p>
 
-<pre class="cmd">$ retu -f data1 data2 data3
+      <pre class="cmd">$ retu -f data1 data2 data3
 data1 2
 data2 2
 data2 1
@@ -165,32 +175,21 @@ data3 1
 data3 2
 $ </pre>
 
-<h3>【コメント】</h3>
+      <h3>【備考】</h3>
 
-<p>ファイル名に-を指定すると標準入力からのデータ読み込みを期待する。</p>
+      <p>ファイル名に-を指定すると標準入力からのデータ読み込みを期待する。</p>
 
-<pre class="cmd">$ cat data2 | retu -f data1 - data3</pre>
+      <pre class="cmd">$ cat data2 | retu -f data1 - data3</pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="count.html">count(USP Lab(1))</a>、<a href="gyo.html">gyo(USP Lab(1))</a>、<a href="juni.html">juni(USP Lab(1))</a>、<a href="rank.html">rank(USP Lab(1))</a></p>
+      <p><a href="count.html">count(1)</a>、<a href="gyo.html">gyo(1)</a>、<a href="juni.html">juni(1)</a>、<a href="rank.html">rank(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 19:07:59
-    </div>
+    <div id="lastmodified">last modified: 2013-09-15 19:04:15</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
