--- a/MANUALHTML/sm2.html
+++ b/MANUALHTML/sm2.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,25 +99,24 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>sm2(USP Lab(1))</h2>
+      <h2>sm2(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>sm2 : キー単位での値の集計</p>
+      <p>sm2 : キー単位での値の集計</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: sm2 [+count] &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
+      <pre class="list">Usage	: sm2 [+count] &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>&lt;file&gt;ファイルから、キーが同じ行の各フィールドの値を集計する。k1で指定したフィールドからk2で指定したフィールドまでをキーとして、s1で指定したフィールドからs2で指定したフィールドまでの各フィールドを集計する。同じキーをもつ行は1行に集計されて出力される。なお、キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力はされない。</p>
+      <p>&lt;file&gt;ファイルから、キーが同じ行の各フィールドの値を集計する。k1で指定したフィールドからk2で指定したフィールドまでをキーとして、s1で指定したフィールドからs2で指定したフィールドまでの各フィールドを集計する。同じキーをもつ行は1行に集計されて出力される。なお、キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力はされない。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 0001 新橋店 20060201 91 59 20 76 54	←店別番号 店名 日付 商品別売数
 0001 新橋店 20060202 46 39 8  5  21
 0001 新橋店 20060203 82 0  23 84 10
@@ -121,20 +131,20 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 0004 上野店 20060203 92 56 83 96 75
 $ </pre>
 
-<p>店別の売れ数の合計を出力させる。第1フィールドから第2フィールドをキーとして第4フィールドから第8フィールドを集計する。</p>
+      <p>店別の売れ数の合計を出力させる。第1フィールドから第2フィールドをキーとして第4フィールドから第8フィールドを集計する。</p>
 
-<pre class="cmd">$ sm2 1 2 4 8 data
+      <pre class="cmd">$ sm2 1 2 4 8 data
 0001 新橋店 219 98 51 165 85
 0002 池袋店 166 134 135 74 87
 0003 新宿店 184 172 93 45 142
 0004 上野店 247 205 151 207 157
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>+countオプションはキー毎の集計すると同時に、元データの各キー毎の行の行数をキーの直後に挿入出力する。</p>
+      <p>+countオプションはキー毎の集計すると同時に、元データの各キー毎の行の行数をキーの直後に挿入出力する。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 1111 3
 1111 5
 1111 2
@@ -146,68 +156,57 @@ $ </pre>
 3333 6
 $ </pre>
 
-<p>キーが同一の行を出力する。</p>
+      <p>キーが同一の行を出力する。</p>
 
-<pre class="cmd">$ sm2 +count 1 1 2 2 data
+      <pre class="cmd">$ sm2 +count 1 1 2 2 data
 1111 3 10
 2222 2 13
 3333 4 27
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>sm2は小数点がある場合、各キー、各フィールド毎に一番精度の高い数に合わせて出力する。</p>
+      <p>sm2(1)は小数点がある場合、各キー、各フィールド毎に一番精度の高い数に合わせて出力する。</p>
 
-<pre class="cmd">$ cat data3
+      <pre class="cmd">$ cat data3
 a 1.4 2.55
 a 2   4
 b 1.33 2.1
 b 5.222 3.12
 $ </pre>
 
-<pre class="cmd">$ sm2 1 1 2 3 data3
+      <pre class="cmd">$ sm2 1 1 2 3 data3
 a 3.4 6.55
 b 6.552 5.22
 $ </pre>
 
-<h3>【例4】</h3>
+      <h3>【例4】</h3>
 
-<p>キーを0 0に指定すると、集計フィールドの総合計を出力する。</p>
+      <p>キーを0 0に指定すると、集計フィールドの総合計を出力する。</p>
 
-<pre class="cmd">$ cat data4
+      <pre class="cmd">$ cat data4
 a 1
 b 2
 c 3
 $ </pre>
 
-<pre class="cmd">$ sm2 0 0 2 2 data4
+      <pre class="cmd">$ sm2 0 0 2 2 data4
 6
 $ </pre>
 
-<p>指定したディレクトリに存在するファイルのサイズを合計するには次のようにコマンドを実行する。</p>
+      <p>指定したディレクトリに存在するファイルのサイズを合計するには次のようにコマンドを実行する。</p>
 
-<pre class="cmd">$ ls -l directory | sm2 0 0 5 5</pre>
+      <pre class="cmd">$ ls -l directory | sm2 0 0 5 5</pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="kasan.html">kasan(USP Lab(1))</a>、<a href="plus.html">plus(USP Lab(1))</a>、<a href="ratio.html">ratio(USP Lab(1))</a>、<a href="sm4.html">sm4(USP Lab(1))</a>、<a href="sm5.html">sm5(USP Lab(1))</a>、<a href="ysum.html">ysum(USP Lab(1))</a></p>
+      <p><a href="kasan.html">kasan(1)</a>、<a href="plus.html">plus(1)</a>、<a href="ratio.html">ratio(1)</a>、<a href="sm4.html">sm4(1)</a>、<a href="sm5.html">sm5(1)</a>、<a href="ysum.html">ysum(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 20:25:31
-    </div>
+    <div id="lastmodified">last modified: 2013-14-15 20:04:15</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
