--- a/MANUALHTML/sm4.html
+++ b/MANUALHTML/sm4.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,28 +99,27 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>sm4(USP Lab(1))</h2>
+      <h2>sm4(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>sm4 : 小計、中計</p>
+      <p>sm4 : 小計、中計</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: sm4 [+h] &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
+      <pre class="list">Usage	: sm4 [+h] &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011
 	: UTF-8</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>&lt;file&gt;ファイルにおけるサブキーによる小計や中計を計算する。k1で指定したフィールドからk2で指定したフィールドまでを主キー、d1からd2までのフィールドがサブキー、s1からs2までのフィールドまでのフィールドを集計フィールドとして、主キーの値が同じキーをサブキーのフィールドを飛ばして集計フィールドを集計して各主キーの行の最終行に挿入する。</p>
+      <p>&lt;file&gt;ファイルにおけるサブキーによる小計や中計を計算する。k1で指定したフィールドからk2で指定したフィールドまでを主キー、d1からd2までのフィールドがサブキー、s1からs2までのフィールドまでのフィールドを集計フィールドとして、主キーの値が同じキーをサブキーのフィールドを飛ばして集計フィールドを集計して各主キーの行の最終行に挿入する。</p>
 
-<p>集計行におけるサブキーのフィールドは@で補完される。小計および中計を段階的に付与するためにsm4を複数回使用する場合には、 サブキーに@が含まれる行は集計から除外される。キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力は実行されない。</p>
+      <p>集計行におけるサブキーのフィールドは@で補完される。小計および中計を段階的に付与するためにsm4(1)を複数回使用する場合には、 サブキーに@が含まれる行は集計から除外される。キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力は実行されない。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 01 埼玉県 01 さいたま市 91 59 20 76 54		←各都市での調査データ
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -126,9 +136,9 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 04 神奈川県 14 厚木市 48 66 23 71 24
 $ </pre>
 
-<p>県別に小計を出する。</p>
+      <p>県別に小計を出する。</p>
 
-<pre class="cmd">$ sm4 1 2 3 4 5 NF data
+      <pre class="cmd">$ sm4 1 2 3 4 5 NF data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -149,11 +159,11 @@ $ </pre>
 04 神奈川県 @@ @@@@@@@@@ 170 134 138 211 118
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>小計と中計を出す。</p>
+      <p>小計と中計を出す。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 関東地区 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 関東地区 02 東京都 04 新宿区 30 50 71 36 30
@@ -171,7 +181,7 @@ $ </pre>
 02 関西地区 03 京都府 10 舞鶴市 60 89 33 18 6
 $ </pre>
 
-<pre class="cmd">$ sm4 1 4 5 6 7 11 data > data2
+      <pre class="cmd">$ sm4 1 4 5 6 7 11 data > data2
 $ cat data2
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 関東地区 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -195,7 +205,7 @@ $ cat data2
 02 関西地区 03 京都府 @@ @@@@@@@@@@ 112 180 77 27 6
 $ </pre>
 
-<pre class="cmd">$ sm4 1 2 3 6 7 11 data2
+      <pre class="cmd">$ sm4 1 2 3 6 7 11 data2
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 関東地区 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 関東地区 01 埼玉県 @@ @@@@@@@@@@ 173 59 43 160 64
@@ -220,11 +230,11 @@ $ </pre>
 02 関西地区 @@ @@@@@@ @@ @@@@@@@@@@ 629 493 312 302 320
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>サブキーがない場合には次のような実行結果が得られる。</p>
+      <p>サブキーがない場合には次のような実行結果が得られる。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 埼玉県 91 59 20 76 54
 埼玉県 46 39 8 5 21
 埼玉県 82 0 23 84 10
@@ -241,7 +251,7 @@ $ </pre>
 神奈川県 48 66 23 71 24
 $ </pre>
 
-<pre class="cmd">$ sm4 1 1 x x 2 6 data
+      <pre class="cmd">$ sm4 1 1 x x 2 6 data
 埼玉県 91 59 20 76 54
 埼玉県 46 39 8 5 21
 埼玉県 82 0 23 84 10
@@ -262,26 +272,15 @@ $ </pre>
 @@@@@@ 170 134 138 211 118
 $ </pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="kasan.html">kasan(USP Lab(1))</a>、<a href="plus.html">plus(USP Lab(1))</a>、<a href="ratio.html">ratio(USP Lab(1))</a>、<a href="sm2.html">sm2(USP Lab(1))</a>、<a href="sm5.html">sm5(USP Lab(1))</a>、<a href="ysum.html">ysum(USP Lab(1))</a></p>
+      <p><a href="kasan.html">kasan(1)</a>、<a href="plus.html">plus(1)</a>、<a href="ratio.html">ratio(1)</a>、<a href="sm2.html">sm2(1)</a>、<a href="sm5.html">sm5(1)</a>、<a href="ysum.html">ysum(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 20:25:55
-    </div>
+    <div id="lastmodified">last modified: 2013-15-15 20:04:15</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
