--- a/MANUALHTML/tateyoko.html
+++ b/MANUALHTML/tateyoko.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,41 +99,40 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>tateyoko(USP Lab(1))</h2>
+      <h2>tateyoko(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>tateyoko : 縦テキストを横テキストへ変換</p>
+      <p>tateyoko : 縦テキストを横テキストへ変換</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: tateyoko &lt;file&gt;
+      <pre class="list">Usage	: tateyoko &lt;file&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>&lt;file&gt;の行を列に縦横変換する。出力する&lt;file&gtファイルの指定がないとき、あるいはファイル名が-の時は、標準入力ファイルを取り込む。</p>
+      <p>&lt;file&gt;の行を列に縦横変換する。出力する&lt;file&gtファイルの指定がないとき、あるいはファイル名が-の時は、標準入力ファイルを取り込む。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 1 2 3
 A B C
 4 5 6
 $ </pre>
 
-<pre class="cmd">$ tateyoko data
+      <pre class="cmd">$ tateyoko data
 1 A 4
 2 B 5
 3 C 6
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p><a href="map.html">map(USP Lab(1))</a>コマンドの出力を縦横変換する。</p>
+      <p><a href="map.html">map(1)</a>の出力を縦横変換する。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 A 10/01 1
 A 10/02 2
 A 10/03 3
@@ -131,43 +141,32 @@ B 10/02 5
 B 10/03 6
 $ </pre>
 
-<pre class="cmd">$ map num=1 data | keta
+      <pre class="cmd">$ <a href="map.html">map</a> num=1 data |  <a href="keta.html">keta</a>
 * 10/01 10/02 10/03
 A     1     2     3
 B     4     5     6
 $ </pre>
 
-<pre class="cmd">$ map num=1 data | tateyoko | keta
+      <pre class="cmd">$ <a href="map.html">map</a> num=1 data | tateyoko | <a href="keta.html">keta</a>
 *     A B
 10/01 1 4
 10/02 2 5
 10/03 3 6
 $ </pre>
 
-<h3>【備考】</h3>
+      <h3>【備考】</h3>
 
-<p>tateyokoは指定ファイルを一旦すべてメモリへ展開する。</p>
+      <p>tateyoko(1)は指定ファイルを一旦すべてメモリへ展開する。</p>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="map.html">map(USP Lab(1))</a>、<a href="unmap.html">unmap(USP Lab(1))</a></p>
+      <p><a href="map.html">map(1)</a>、<a href="unmap.html">unmap(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 20:32:02
-    </div>
+    <div id="lastmodified">last modified: 2013-23-15 20:04:15</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
