--- a/MANUALHTML/tcat.html
+++ b/MANUALHTML/tcat.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,38 +99,37 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>tcat(USP Lab(1))</h2>
+      <h2>tcat(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>tcat : ファイルを縦へ並べ替え</p>
+      <p>tcat : ファイルを縦へ並べ替え</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: tcat [-n] &lt;file1&gt; &lt;file2&gt;...
+      <pre class="list">Usage	: tcat [-n] &lt;file1&gt; &lt;file2&gt;...
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>引数で指定した複数のファイルを縦に並べて連結して出力する。</p>
+      <p>引数で指定した複数のファイルを縦に並べて連結して出力する。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat file1
-                             ---試験結果---
+      <pre class="cmd">$ cat file1
+---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
 $ </pre>
 
-<pre class="cmd">$ cat file2
+      <pre class="cmd">$ cat file2
 0000008 角屋______   50    F 52 91 44  9  0
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
 $ </pre>
 
-<pre class="cmd">$ tcat file1 file2
-                             ---試験結果---
+      <pre class="cmd">$ tcat file1 file2
+---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
 0000008 角屋______   50    F 52 91 44  9  0
 0000009 米原______   68    F 60 89 33 18  6
@@ -127,14 +137,14 @@ $ </pre>
 0000011 安武______   55    F 92 56 83 96 75
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>-&lt;n&gt;オプションを使用すると、ファイルを&lt;n&gt;-で指定した行数分だけ間をあけて連結することができる。</p>
+      <p>-&lt;n&gt;オプションを使用すると、ファイルを&lt;n&gt;-で指定した行数分だけ間をあけて連結することができる。</p>
 
-<p>2行あけて連結するには次のようにコマンドを実行する。</p>
+      <p>2行あけて連結するには次のようにコマンドを実行する。</p>
 
-<pre class="cmd">$ tcat -2 file1 file2
-                             ---試験結果---
+      <pre class="cmd">$ tcat -2 file1 file2
+---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
 
 
@@ -144,32 +154,21 @@ $ </pre>
 0000011 安武______   55    F 92 56 83 96 75
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>標準入力から読み込む場合、標準入力側のテキストを引数-で指定する。</p>
+      <p>標準入力から読み込む場合、標準入力側のテキストを引数-で指定する。</p>
 
-<pre class="cmd">$ cat file1 | tcat - file2</pre>
+      <pre class="cmd">$ cat file1 | tcat - file2</pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="ctail.html">ctail(USP Lab(1))</a>、<a href="getfirst.html">getfirst(USP Lab(1))</a>、<a href="getlast.html">getlast(USP Lab(1))</a>、<a href="ycat.html">ycat(USP Lab(1))</a></p>
+      <p><a href="ctail.html">ctail(1)</a>、<a href="getfirst.html">getfirst(1)</a>、<a href="getlast.html">getlast(1)</a>、<a href="ycat.html">ycat(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 19:26:08
-    </div>
+    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
