--- a/MANUALHTML/transaction-file.html
+++ b/MANUALHTML/transaction-file.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -31,14 +29,21 @@
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -98,7 +103,7 @@
 
       <h3>【名前】</h3>
 
-      <p>トランザクションファイル : トランザクションの性質を満たす<a href="field-format.html">フィールド形式</a>のファイル</p>
+      <p>トランザクションファイル : トランザクションの性質を満たす<a href="field-format.html">フィールド形式(5)</a>のファイル</p>
 
       <h3>【書式】</h3>
 
@@ -109,13 +114,13 @@
 
       <p>売上データなど随時データの追加などが実施されるタイプのデータはトランザクションと呼ばれている。トランザクションは短縮してトランと呼ばれることも多い。</p>
 
-      <p><a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>では、トランザクションに該当する<a href="field-format.html">フィールド形式</a>のファイルをトランザクションファイルと呼んでいる。</p>
+      <p><a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>では、トランザクションに該当する<a href="field-format.html">フィールド形式(5)</a>のファイルをトランザクションファイル(5)と呼んでいる。</p>
 
-      <p>トランザクションファイルは短縮してトランと呼ばれることがあり、また、<a href="index.html">Tukubaiコマンドマニュアル</a>ではtranと表記される。トランザクションファイルとは対照的にデータ変更のタイミングがあらかじめ定めされており、キーフィールドが重複せずかつ整列されているようなフィールド形式のファイルは<a href="master-file.html">マスタファイル</a>と呼ばれている。</p>
+      <p>トランザクションファイル(5)は短縮してトランと呼ばれることがあり、また、<a href="index.html">Tukubaiコマンドマニュアル</a>ではtranと表記される。トランザクションファイル(5)とは対照的にデータ変更のタイミングがあらかじめ定めされており、キーフィールドが重複せずかつ整列されているようなフィールド形式(5)のファイルは<a href="master-file.html">マスタファイル(5)</a>と呼ばれている。</p>
 
       <h3>【例1】</h3>
 
-      <p>トランザクションファイルの例は次のとおり。</p>
+      <p>トランザクションファイル(5)の例は次のとおり。</p>
 
       <pre class="source">20110405 001 13513543
 20110405 002 3403346
@@ -134,9 +139,9 @@
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-08-01 16:19:55</div>
+    <div id="lastmodified">last modified: 2013-27-15 20:04:15</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
