--- a/MANUALHTML/unmap.html
+++ b/MANUALHTML/unmap.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,48 +99,47 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>unmap(USP Lab(1))</h2>
+      <h2>unmap(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>unmap : 縦キー/横キー形式の表データを縦型ファイルに変換</p>
+      <p>unmap : 縦キー/横キー形式の表データを縦型ファイルに変換</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: map       [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
+      <pre class="list">Usage	: map       [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
 	: map +yarr [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
 	: map +arr  [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
 Version	: Sat Dec 10 21:04:17 JST 2011
 	: OpenUSP (LINUX+FREEBSD/PYTHON2.4/UTF-8)</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p><a href="map.html">map(USP Lab(1))</a>コマンドと逆の動作をする。</p>
+      <p><a href="map.html">map(1)</a>と逆の動作をする。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<p>表データを縦型ファイルに変換する。num=&lt;n&gt;の値は縦キーのフィールド数を表す。</p> 
+      <p>表データを縦型ファイルに変換する。num=&lt;n&gt;の値は縦キーのフィールド数を表す。</p>
 
-<pre class="cmd">$ cat data
-  *   * 01/01 01/02
+      <pre class="cmd">$ cat data
+*   * 01/01 01/02
 001 a店   103   157
 002 b店   210   237
 $ </pre>
 
-<pre class="cmd">$ unmap num=2 data | keta 
+      <pre class="cmd">$ un<a href="map.html">map</a> num=2 data |  <a href="keta.html">keta</a>
 001 a店 01/01 103
 001 a店 01/02 157
 002 b店 01/01 210
 002 b店 01/02 237
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>データ部が複数種ある場合は、複数列にマッピングする。</p>
+      <p>データ部が複数種ある場合は、複数列にマッピングする。</p>
 
-<pre class="cmd">$ cat data
-  * * 1日目 2日目 3日目 4日目 5日目 6日目 7日目
+      <pre class="cmd">$ cat data
+* * 1日目 2日目 3日目 4日目 5日目 6日目 7日目
 a店 A   103   157    62   131   189   350   412
 a店 B    62    94    30    84   111    20   301
 b店 A   210   237   150   198   259   421   589
@@ -140,37 +150,26 @@ d店 A    75    72    34    74    91    98   101
 d店 B    48    42    19    43    51    69    90
 $ </pre>
 
-<pre class="cmd">$ unmap num=1 data | keta 
+      <pre class="cmd">$ un<a href="map.html">map</a> num=1 data |  <a href="keta.html">keta</a>
 a店 1日目 103 62
 a店 2日目 157 94
 a店 3日目 62 30
 a店 4日目 131 84
-       ・
-       ・
+・
+・
 d店 6日目 98 69
 d店 7日目 101 90
 $ </pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="map.html">map(USP Lab(1))</a>、<a href="tateyoko.html">tateyoko(USP Lab(1))</a></p>
+      <p><a href="map.html">map(1)</a>、<a href="tateyoko.html">tateyoko(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 20:31:22
-    </div>
+    <div id="lastmodified">last modified: 2013-27-15 20:04:15</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
