--- a/MANUALHTML/ysum.html
+++ b/MANUALHTML/ysum.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,26 +99,25 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>ysum(USP Lab(1))</h2>
+      <h2>ysum(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>ysum : 横集計</p>
+      <p>ysum : 横集計</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage	: ysum [+h] num=&lt;n&gt; &lt;file&gt;
+      <pre class="list">Usage	: ysum [+h] num=&lt;n&gt; &lt;file&gt;
 	: ysum [+h] &lt;file&gt;
 Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>&lt;file&gt;ファイルの、同一行内の各フィールドの合計を行末に追加する。num=&lt;n&gt;で指定したフィールドの次以降の全フィールドを集計して最終フィールドの後に追加する。num=&lt;n&gt;を省略した場合、num=0と同じ動作をする。</p>
+      <p>&lt;file&gt;ファイルの、同一行内の各フィールドの合計を行末に追加する。num=&lt;n&gt;で指定したフィールドの次以降の全フィールドを集計して最終フィールドの後に追加する。num=&lt;n&gt;を省略した場合、num=0と同じ動作をする。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 0000000 浜地______ 50 F 91 59 20 76 54	←番号 氏名 年齢 性別 教科別点数A B C D E
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -116,9 +126,9 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 0000007 梶川______ 42 F 50 2  33 15 62
 $ </pre>
 
-<p>教科別の点数(5フィールド目以降)を集計して最終フィールドの次に追加する。</p>
+      <p>教科別の点数(5フィールド目以降)を集計して最終フィールドの次に追加する。</p>
 
-<pre class="cmd">$ ysum num=4 data
+      <pre class="cmd">$ ysum num=4 data
 0000000 浜地______ 50 F 91 59 20 76 54 300
 0000001 鈴田______ 50 F 46 39 8  5  21 119
 0000003 杉山______ 26 F 30 50 71 36 30 217
@@ -127,13 +137,13 @@ $ </pre>
 0000007 梶川______ 42 F 50 2  33 15 62 162
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>+hオプションを指定すると先頭行以外の行を集計する。先頭行が項目名などのヘッダーのデータなどに使用する。このとき先頭行の集計値フィールドには@が追加される。</p>
+      <p>+hオプションを指定すると先頭行以外の行を集計する。先頭行が項目名などのヘッダーのデータなどに使用する。このとき先頭行の集計値フィールドには@が追加される。</p>
 
-<p>先頭行を飛ばして教科別の点数(5フィールド目以降)を集計して最終フィールドの次に追加するには次のようにコマンドを実行する。</p>
+      <p>先頭行を飛ばして教科別の点数(5フィールド目以降)を集計して最終フィールドの次に追加するには次のようにコマンドを実行する。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 0000000 浜地______ 50 F 91 59 20 76 54	←番号 氏名 年齢 性別 教科別点数A B C D
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -142,8 +152,8 @@ $ </pre>
 0000007 梶川______ 42 F 50 2  33 15 62
 $ </pre>
 
-<pre class="cmd">$ ysum +h num=4 data | keta
-     No       氏名 年齢 性別  A  B  C  D  E   @	←先頭行には@がつく
+      <pre class="cmd">$ ysum +h num=4 data |  <a href="keta.html">keta</a>
+No       氏名 年齢 性別  A  B  C  D  E   @	←先頭行には@がつく
 0000000 浜地______   50    F 91 59 20 76 54 300
 0000001 鈴田______   50    F 46 39  8  5 21 119
 0000003 杉山______   26    F 30 50 71 36 30 217
@@ -152,26 +162,15 @@ $ </pre>
 0000007 梶川______   42    F 50  2 33 15 62 162
 $ </pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="kasan.html">kasan(USP Lab(1))</a>、<a href="plus.html">plus(USP Lab(1))</a>、<a href="ratio.html">ratio(USP Lab(1))</a>、<a href="sm2.html">sm2(USP Lab(1))</a>、<a href="sm4.html">sm4(USP Lab(1))</a>、<a href="sm5.html">sm5(USP Lab(1))</a></p>
+      <p><a href="kasan.html">kasan(1)</a>、<a href="plus.html">plus(1)</a>、<a href="ratio.html">ratio(1)</a>、<a href="sm2.html">sm2(1)</a>、<a href="sm4.html">sm4(1)</a>、<a href="sm5.html">sm5(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 20:27:03
-    </div>
+    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
