--- a/MANUALHTML/zen.html
+++ b/MANUALHTML/zen.html
@@ -6,11 +6,9 @@
   <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <!--[if lte IE 7]>
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <!--[if lte IE 8]>
   <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
-  <![endif]-->
-  <!--[if IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE8HACK.CSS" />
   <![endif]-->
   <!--[if IE 7]>
   <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
@@ -27,18 +25,25 @@
         <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
       </div>
       <div id="title">
-        <p id="slogan">UEC - UNIXを深く理解し、シェルプログラミングを極めるコミュニティサイト</p>
+        <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
@@ -76,9 +81,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
+              <li class="separator"><hr/></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
+              <li><a href="master-file.html">マスタファイル(5)</a></li>
+              <li><a href="name-file.html">ネームファイル(5)</a></li>
+              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -88,89 +99,77 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<!-- CONTENTS_CONTENTS -->
-<h2>zen(USP Lab(1))</h2>
+      <h2>zen(1)</h2>
 
-<h3>【名前】</h3>
+      <h3>【名前】</h3>
 
-<p>zen : 全角へ変換</p>
+      <p>zen : 全角へ変換</p>
 
-<h3>【書式】</h3>
+      <h3>【書式】</h3>
 
-<pre class="list">Usage   : zen &lt;f1&gt; &lt;f2&gt; .. &lt;file&gt;
-        : zen [-k] &lt;file&gt;
-        : zen -d &lt;string&gt;
+      <pre class="list">Usage   : zen &lt;f1&gt; &lt;f2&gt; .. &lt;file&gt;
+: zen [-k] &lt;file&gt;
+: zen -d &lt;string&gt;
 Version : Fri Oct 21 11:26:06 JST 2011
-          OpenUSP (LINUX+FREEBSD/PYTHON2.4/UTF-8)</pre>
+OpenUSP (LINUX+FREEBSD/PYTHON2.4/UTF-8)</pre>
 
-<h3>【説明】</h3>
+      <h3>【説明】</h3>
 
-<p>引数のファイルまたは標準入力におけるテキストデータの半角英数およびカタカナをすべて全角に変換して出力する(<a href="han.html">han</a>)。</p>
+      <p>引数のファイルまたは標準入力におけるテキストデータの半角英数およびカタカナをすべて全角に変換して出力する。</p>
 
-<h3>【例1】</h3>
+      <h3>【例1】</h3>
 
-<p>引数のファイルの指定したフィールドの中身を全角に変換する。</p>
+      <p>引数のファイルの指定したフィールドの中身を全角に変換する。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 これは ﾃﾞｰﾀ です。
 This is data
 123 456 7890
 $ </pre>
 
-<pre class="cmd">$ zen 1 2 3 data
+      <pre class="cmd">$ zen 1 2 3 data
 これは データ です。
 Ｔｈｉｓ ｉｓ ｄａｔａ
 １２３ ４５６ ７８９０
 $ </pre>
 
-<h3>【例2】</h3>
+      <h3>【例2】</h3>
 
-<p>フィールドを指定しない場合は行全体を全角にする。半角空白も全角空白に変換する。</p>
+      <p>フィールドを指定しない場合は行全体を全角にする。半角空白も全角空白に変換する。</p>
 
-<pre class="cmd">$ cat data
+      <pre class="cmd">$ cat data
 1 2 3
 $ cat data | zen
 １　２　３
 $ </pre>
 
-<h3>【例3】</h3>
+      <h3>【例3】</h3>
 
-<p>zen -k &lt;file&gt;の場合、&lt;file&gt;の半角カタカナだけ全角にする。メールの表題や本文には半角カナは使えないため、このフィルタを使用して前処理を実施する。</p>
+      <p>zen -k &lt;file&gt;の場合、&lt;file&gt;の半角カタカナだけ全角にする。メールの表題や本文には半角カナは使えないため、このフィルタを使用して前処理を実施する。</p>
 
-<pre class="cmd">$ cat data2
+      <pre class="cmd">$ cat data2
 123ｱｲｳｴｵ
 $ cat data2 | zen -k
 123アイウエオ
 $ </pre>
 
-<h3>【例4】</h3>
+      <h3>【例4】</h3>
 
-<p>"-d"オプションは引数で指定された文字列の半角の部分を全角に変えて出力する。</p>
+      <p>-dオプションは引数で指定された文字列の半角の部分を全角に変えて出力する。</p>
 
-<pre class="cmd">$ zen -d ｶﾀｶﾅABC123		←半角文字を引数で渡す。
+      <pre class="cmd">$ zen -d ｶﾀｶﾅABC123		←半角文字を引数で渡す。
 カタカナＡＢＣ１２３		←すべて全角にして出力
 $ </pre>
 
-<h3>【関連項目】</h3>
+      <h3>【関連項目】</h3>
 
-<p><a href="han.html">han(USP Lab(1))</a></p>
+      <p><a href="han.html">han(1)</a></p>
 
-<div id="pagenavigator">
-  <ul>
-    <li><a href="index.html">&and;</a></li>
-  </ul>
-</div>
-<!-- CONTENTS_CONTENTS -->
     </div>
 
-    <div id="lastmodified">
-     last modified: 2012-04-12 19:46:56
-    </div>
+    <div id="lastmodified">last modified: 2013-38-16 16:04:16</div>
 
-    <div id="footer">
-      Contact us: uecinfo@usp-lab.com<br>
-      Copyright (c) 2012 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.
-    </div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
